--- a/A.html
+++ b/A.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre A</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre A</h1>
           <p>
             <strong>A</strong> (<em lang="wln-BE">lète</em>) :
             <em lang="wln-BE">i n' counwèt ni A, ni B</em> (pour un
@@ -823,7 +823,7 @@
             <strong>accord</strong>, <em lang="wln-BE">acoûrd,</em> n.m.
             <em lang="wln-BE"
               >Nos stons d'acoûrd sul prix dèl mézo qui stoût à vinde</em
-            >. Y<em lang="wln-BE">èsse d'acoûrd come tchi yè tcha</em>
+            >. <em lang="wln-BE">Yèsse d'acoûrd come tchi yè tcha</em>
             (iron.).
           </p>
           <p>
@@ -2496,7 +2496,7 @@
             <em lang="wln-BE">In mau l'ér</em> ou
             <em lang="wln-BE">mau-bèl-ér </em>: pour une personne antipathique,
             mal habillée. <em lang="wln-BE">Avwêr in ér dè deûs érs </em>: pour
-            une mine montrant un doute. Y<em lang="wln-BE">èsse su l' ér</em> :
+            une mine montrant un doute. <em lang="wln-BE">Yèsse su l' ér</em> :
             être alcoolisé et gai. <em lang="wln-BE">Dj'ai l'ér dè rîre ?</em>
             <em lang="wln-BE">Il a l'ér qu'èl solèy' arife</em>.
           </p>
@@ -2675,9 +2675,9 @@
           </p>
           <p>
             <strong>alerte</strong>, <em lang="wln-BE">alèrte,</em> n.f.
-            <em lang="wln-BE">Doner l' alèrte</em>. Y<em lang="wln-BE"
-              >èsse in alèrte</em
-            >. <em lang="wln-BE">Avwêr ène tchaude </em>: une chaude alerte.
+            <em lang="wln-BE">Doner l' alèrte</em>.
+            <em lang="wln-BE">Yèsse in alèrte</em>.
+            <em lang="wln-BE">Avwêr ène tchaude </em>: une chaude alerte.
           </p>
           <p>
             <strong>alésage</strong>, alésâdje, n.m.
@@ -2759,7 +2759,7 @@
             >. <em lang="wln-BE">Ça n' va pus qu' d' ène fèsse </em>: le ménage
             est boîteux. <em lang="wln-BE">Daler pa-d'zeûr, yè pa-d'zou </em>:
             pour une gastro-entérite. <em lang="wln-BE">Dalone ? </em>: on y
-            va ? Y<em lang="wln-BE">èsse à dalâdje </em>: être en train.
+            va ? <em lang="wln-BE">Yèsse à dalâdje </em>: être en train.
             Particularités : allez-vous-en : <em lang="wln-BE">vas-z-è,</em>
             <em lang="wln-BE">vas-z-in, alez-vous-rzè, alez-r-vous-è</em>.
             Taquiner : <em lang="wln-BE">fé daler</em>.
@@ -5125,7 +5125,7 @@
             <strong>article</strong>, <em lang="wln-BE">ârtike,</em> n.m. Y<em
               lang="wln-BE"
               >èsse à l' ârtike dè la mort</em
-            >. Y<em lang="wln-BE">èsse toudi à pârler d' l' ârtike </em>: parler
+            >. <em lang="wln-BE">Yèsse toudi à pârler d' l' ârtike </em>: parler
             de sexe.
           </p>
           <p>
@@ -5192,8 +5192,9 @@
           <p>
             <strong>Ascension</strong>, <em lang="wln-BE">Acinsion</em>.
             <em lang="wln-BE">A l'Acinsion, à Nivèle, on fét monter 'l balon</em
-            >. <em lang="wln-BE">A</em> Y<em lang="wln-BE"
-              >ite, èl rûwe dè l' Acinsion a sti batijéye dinsi tél'mint qu' ça
+            >. <em lang="wln-BE">A</em>
+            <em lang="wln-BE"
+              >Yite, èl rûwe dè l' Acinsion a sti batijéye dinsi tél'mint qu' ça
               monte foûrt</em
             >.
           </p>
@@ -5515,8 +5516,9 @@
           </p>
           <p>
             <strong>assureur</strong>, <em lang="wln-BE">assureû,</em> n.m.
-            <em lang="wln-BE">A</em> Y<em lang="wln-BE"
-              >ite, on va à l'assureû Pascal Henry, ou bi lé Bougard, ou bî lé
+            <em lang="wln-BE">A</em>
+            <em lang="wln-BE"
+              >Yite, on va à l'assureû Pascal Henry, ou bi lé Bougard, ou bî lé
               Camby à Tubisse</em
             >.
           </p>
@@ -5968,8 +5970,8 @@
             <strong>au-dessus</strong>,
             <em lang="wln-BE">au-d'zeûr, pa-d'zeûr</em>.
             <em lang="wln-BE">Dji d'ai au-dzeûr dèl tièsse dè vos ramâdjes</em>.
-            Y<em lang="wln-BE"
-              >è, au-d'zeûr du martchi, vlà qu'i s'a mis à pieûre à rlaye !</em
+            <em lang="wln-BE"
+              >Yè, au-d'zeûr du martchi, vlà qu'i s'a mis à pieûre à rlaye !</em
             >
           </p>
           <p><strong>au-devant</strong>, <em lang="wln-BE">pa-d'vant</em>.</p>
@@ -6043,9 +6045,8 @@
           </p>
           <p>
             <strong>aumônier</strong>, <em lang="wln-BE">aumonier,</em> n.m.
-            <em lang="wln-BE">L'aumonier dèl prijon d'</em> Y<em lang="wln-BE"
-              >ite</em
-            >.
+            <em lang="wln-BE">L'aumonier dèl prijon d'</em>
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>aunage</strong>, <em lang="wln-BE">aunâdje</em>, n.m.,
@@ -6139,8 +6140,9 @@
           </p>
           <p>
             <strong>auteur</strong>, <em lang="wln-BE">auteûr,</em> n.m.
-            <em lang="wln-BE">Al bibliyotèke dè</em> Y<em lang="wln-BE"
-              >ite, c'est Signol l'auteûr que lès djins lîje èl pus volti</em
+            <em lang="wln-BE">Al bibliyotèke dè</em>
+            <em lang="wln-BE"
+              >Yite, c'est Signol l'auteûr que lès djins lîje èl pus volti</em
             >.
           </p>
           <p>
@@ -6760,8 +6762,8 @@
           </p>
           <p><strong>azalée</strong>, <em lang="wln-BE">azaléye,</em> n.f.</p>
           <p><strong>azote</strong><em lang="wln-BE">, azote,</em> n.m.</p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <section
       id="footnotes"
@@ -6771,14 +6773,12 @@
       <div class="container">
         <ol>
           <li id="fn2">
-            <p>
-              Dictionnaire Général de la langue française par Fr Raymond 1832.<a
-                href="#fnref2"
-                class="footnote-back"
-                role="doc-backlink"
-                >↩︎</a
-              >
-            </p>
+            Dictionnaire Général de la langue française par Fr Raymond 1832.<a
+              href="#fnref2"
+              class="footnote-back"
+              role="doc-backlink"
+              >↩︎</a
+            >
           </li>
         </ol>
       </div>
