--- a/B.html
+++ b/B.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre B</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre B</h1>
           <p>
             <strong>baas</strong>,
             <strong>bazine</strong>,<strong> </strong>patron, patronne, chef,
@@ -129,9 +129,9 @@
           </p>
           <p>
             <strong>bac</strong>, <em lang="wln-BE">batch,</em> n.m.
-            <em lang="wln-BE">Èl batch dès pourchas</em>. Y<em lang="wln-BE"
-              >èsse mésse du batch </em
-            >: avoir tout à dire. <em lang="wln-BE">Fé batch avu lès</em>
+            <em lang="wln-BE">Èl batch dès pourchas</em>.
+            <em lang="wln-BE">Yèsse mésse du batch </em>: avoir tout à dire.
+            <em lang="wln-BE">Fé batch avu lès</em>
             <em lang="wln-BE">autes </em>: se mêler aux autres. Petit café où
             l'on vend de la goutte : <em lang="wln-BE">in batch à chnik</em>.
             <em lang="wln-BE"
@@ -460,8 +460,9 @@
             <em lang="wln-BE"
               >Al procèssion, 4 omes tènine in bèrdakin au d'zeûr du curé qui
               tènoût èl Sint Sacrèmint</em
-            >. <em lang="wln-BE">A l'èglîje dè</em> Y<em lang="wln-BE"
-              >ite, il a in bèrdakin au d'zeûr dè l'auté du mitan</em
+            >. <em lang="wln-BE">A l'èglîje dè</em>
+            <em lang="wln-BE"
+              >Yite, il a in bèrdakin au d'zeûr dè l'auté du mitan</em
             >.
             <em lang="wln-BE"
               >In latin, ou bi pou lès cis qui scrèpe leû francès, ça s' apèle
@@ -1350,7 +1351,7 @@
             <em lang="wln-BE">bate èl bûre</em>. Rv. Y<em>è vo sieûr ?</em>
             Rép. :
             <em lang="wln-BE">èle bat 'l bûre avu lès couyes du facteûr !</em>
-            Var. Y<em lang="wln-BE">è vo sieûr ?</em>
+            Var. <em lang="wln-BE">Yè vo sieûr ?</em>
             Rép. :
             <em lang="wln-BE"
               >èle bat 'l bûre avè lès couyes du facteûr, yè quand èle batra du
@@ -2063,7 +2064,7 @@
             <em lang="wln-BE">Ène bièsse à bon Dieu </em>: coccinelle. Y<em
               lang="wln-BE"
               >èsse bièsse à pinde</em
-            >. Y<em lang="wln-BE">èsse bièsse</em>
+            >. <em lang="wln-BE">Yèsse bièsse</em>
             <em lang="wln-BE">come sès pîds</em>. Y<em>èsse bièsse à louyi </em
             >: être bête à lier.
             <em lang="wln-BE">Il est pus bièsse què sès deûs pîds</em>.
@@ -2190,9 +2191,9 @@
             <em lang="wln-BE">Du bûre dè gate</em>.
             <em lang="wln-BE">Du bûre dè djoute </em>: de navets et betteraves.
             <em lang="wln-BE">Du bûre dè vatche sins sé</em>.
-            <em lang="wln-BE">Fé 's bûre</em>. Y<em lang="wln-BE"
-              >èsse èl cu dins 'l bûre</em
-            >. <em lang="wln-BE">Promète pus d' bûre què d' pain </em>: des
+            <em lang="wln-BE">Fé 's bûre</em>.
+            <em lang="wln-BE">Yèsse èl cu dins 'l bûre</em>.
+            <em lang="wln-BE">Promète pus d' bûre què d' pain </em>: des
             promesses impossibles à tenir.
             <em lang="wln-BE">On n'a jamé strauné avu du bûre</em> : abondance
             de biens ne nuit pas.
@@ -3737,9 +3738,9 @@
           </p>
           <p>
             <strong>bouderie</strong>, <em lang="wln-BE">grougne</em>, n.f.,
-            <em lang="wln-BE">grougnâdje</em>, n.m. Y<em lang="wln-BE"
-              >èsse in grougne avu 'ne saki</em
-            >. <em lang="wln-BE">In grougnâdje qui dur' lonmin</em>.
+            <em lang="wln-BE">grougnâdje</em>, n.m.
+            <em lang="wln-BE">Yèsse in grougne avu 'ne saki</em>.
+            <em lang="wln-BE">In grougnâdje qui dur' lonmin</em>.
             <em lang="wln-BE"
               >Èle li z-a sièrvi dèl grougne avu 'ne salâde dè cu rtourné </em
             >: elle boude en lui tournant le dos.
@@ -4799,7 +4800,7 @@
             <em lang="wln-BE"
               >Marc èl pècheû nè rinte jamé mèrlitche quand i va lanci sès
               lignes au canâl</em
-            >. Rv. Y<em lang="wln-BE">èsse bosmane </em>: bredouille en parlant
+            >. Rv. <em lang="wln-BE">Yèsse bosmane </em>: bredouille en parlant
             de tir à l'arc. Rentrer bredouille :
             <em lang="wln-BE">s'inraler browète</em>.
           </p>
@@ -4862,8 +4863,9 @@
             <em lang="wln-BE">Ène vatche bretone</em>.
             <em lang="wln-BE">Ène pètite bretone </em>: dame à la forte
             poitrine. <em lang="wln-BE">Bwêre du cîde breton</em>.
-            <em lang="wln-BE">A</em> Y<em lang="wln-BE"
-              >ite, yun dès brètons lès pus counus, c'est Pascal Vivien, spoté
+            <em lang="wln-BE">A</em>
+            <em lang="wln-BE"
+              >Yite, yun dès brètons lès pus counus, c'est Pascal Vivien, spoté
               Tonton Jirafe</em
             >.
             <em lang="wln-BE"
@@ -5146,7 +5148,7 @@
             <em lang="wln-BE">Ène broche in n-oûr</em>.
             <em lang="wln-BE">Bouchi in trô avu ène broke</em>. Rv.
             <em lang="wln-BE">Il a toudi ène broke à mète au trô </em>: il a
-            réponse à tout. Y<em lang="wln-BE">èsse réde come ène broke</em>.
+            réponse à tout. <em lang="wln-BE">Yèsse réde come ène broke</em>.
             <em lang="wln-BE">Dmeurer à broke </em>: rester à quia, bloqué.
           </p>
           <p>
@@ -5738,8 +5740,8 @@
             >. En parlant d'un buveur invétéré :
             <em lang="wln-BE">li, il d'djà pichi ène cinse à li tout seû !</em>
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
