--- a/D.html
+++ b/D.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre D</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre D</h1>
           <p>
             <strong>da !</strong>, particule, <em lang="wln-BE">da !</em>.
             Oui-da !<em>, bî waye-da !</em> Mais non-da !<em lang="wln-BE"> </em
@@ -250,9 +250,9 @@
           <p>
             <strong>dans</strong><em lang="wln-BE">, dins</em>.
             <em lang="wln-BE">Acater in tchat dins n-in satch</em> ou
-            <em lang="wln-BE">dins in satch</em>. Y<em lang="wln-BE"
-              >èsse dins lès rûjes</em
-            >. <em lang="wln-BE">Dins in n-an, i dira mèyeû</em>.
+            <em lang="wln-BE">dins in satch</em>.
+            <em lang="wln-BE">Yèsse dins lès rûjes</em>.
+            <em lang="wln-BE">Dins in n-an, i dira mèyeû</em>.
             <em lang="wln-BE">Il a tcheut dins in trô</em> ou
             <em lang="wln-BE">dins n-in trô</em>.
           </p>
@@ -353,9 +353,9 @@
             <em lang="wln-BE">Travayi du djoû</em>.
             <em lang="wln-BE">Èl kinje d'awouss'</em>.
             <em lang="wln-BE">Èl tchi d'à Philippe</em>.
-            <em lang="wln-BE">Dès bias èfants</em>. Y<em lang="wln-BE"
-              >èsse dès cîs qui crwèye co à sint Nicolas</em
-            >. <em lang="wln-BE">Il inme bî d' rîre avu lès djins</em>.
+            <em lang="wln-BE">Dès bias èfants</em>.
+            <em lang="wln-BE">Yèsse dès cîs qui crwèye co à sint Nicolas</em>.
+            <em lang="wln-BE">Il inme bî d' rîre avu lès djins</em>.
             <em lang="wln-BE">I n'pût ni daler djeûwer d'ès' père</em>.
           </p>
           <p>
@@ -615,9 +615,8 @@
           </p>
           <p>
             <strong>débordé</strong>, <strong>e</strong
-            ><em lang="wln-BE">, dèsboûrdé, ye,</em> adj. Y<em lang="wln-BE"
-              >èsse dèsboûrdé d'où-vrâdje</em
-            >.
+            ><em lang="wln-BE">, dèsboûrdé, ye,</em> adj.
+            <em lang="wln-BE">Yèsse dèsboûrdé d'où-vrâdje</em>.
           </p>
           <p>
             <strong>débordement</strong>,
@@ -1433,10 +1432,10 @@
           <p><em lang="wln-BE">A vos bias d'gnoûs</em></p>
           <p><em lang="wln-BE">A vos bias îs,</em></p>
           <p><em lang="wln-BE">A vos bias pîds,</em></p>
-          <p>Y<em lang="wln-BE">è tout 'l rèsse !</em></p>
+          <p><em lang="wln-BE">Yè tout 'l rèsse !</em></p>
           <p><em lang="wln-BE">Faisez in jèsse,</em></p>
           <p><em lang="wln-BE">Dji vos vwès volti !</em></p>
-          <p>Y<em lang="wln-BE">è vous !? Dites-mi,</em></p>
+          <p><em lang="wln-BE">Yè vous !? Dites-mi,</em></p>
           <p><em lang="wln-BE">Vos n' mè raguidez ni !</em></p>
           <p><em lang="wln-BE">Tant pîre !</em></p>
           <p><em lang="wln-BE">Ayeû djè dirai vîr !</em></p>
@@ -2519,8 +2518,9 @@
           </p>
           <p>
             <strong>demi-mal</strong>,
-            <em lang="wln-BE">dèmi-mau, d'mi-mau</em>. Y<em lang="wln-BE"
-              >èsse marié, c'est souvint in d'mi-mau, mins arètone dè no
+            <em lang="wln-BE">dèmi-mau, d'mi-mau</em>.
+            <em lang="wln-BE"
+              >Yèsse marié, c'est souvint in d'mi-mau, mins arètone dè no
               plinde !</em
             >
           </p>
@@ -2630,8 +2630,9 @@
             <strong>démon</strong>, <em lang="wln-BE">démon</em>,
             <em lang="wln-BE">diâle, djâle</em>, n.m.
             <em lang="wln-BE">In démon d' coumère</em>. Rv.
-            <em lang="wln-BE">Alez au diâle !</em> Répl. Y<em lang="wln-BE"
-              >è vous, alez au démon, c'est co deûs eûres pus lon</em
+            <em lang="wln-BE">Alez au diâle !</em> Répl.
+            <em lang="wln-BE"
+              >Yè vous, alez au démon, c'est co deûs eûres pus lon</em
             >.
           </p>
           <p>
@@ -2825,9 +2826,8 @@
           <p><strong>dénuder</strong>, <em lang="wln-BE">dèsnûder</em>.</p>
           <p>
             <strong>dénué</strong>, <strong>e</strong
-            ><em lang="wln-BE">, dju,</em> adj. invar. Y<em lang="wln-BE"
-              >èsse dju d' sintimints</em
-            >.
+            ><em lang="wln-BE">, dju,</em> adj. invar.
+            <em lang="wln-BE">Yèsse dju d' sintimints</em>.
           </p>
           <p>
             <strong>dénuement</strong>, être dans le<em lang="wln-BE"
@@ -3141,8 +3141,9 @@
               >A Tubisse, èl rûwe dèl Dèportâcion s' apèle dinsi paskè èl 9
               novimbe 1916, 352 omes ont sti à pîd dèl Grand-Place djusk'à 'l
               gâre dè Clabecq pou yèsse dèpoûrtés in Almagne</em
-            >. <em lang="wln-BE">Lès omes dè</em> Y<em lang="wln-BE"
-              >ite, Waut-Ite yè Vèznau qu'avine intrè 17 yè 55 ans ont du daler
+            >. <em lang="wln-BE">Lès omes dè</em>
+            <em lang="wln-BE"
+              >Yite, Waut-Ite yè Vèznau qu'avine intrè 17 yè 55 ans ont du daler
               sul Place Sint Paul à Nivèle èl mèrcrèdi 8 novimbe à 8 eûres</em
             >.
             <em lang="wln-BE"
@@ -3441,9 +3442,9 @@
             > : avoir fait fortune et être aux prises avec d'autres ennuis. Y<em
               lang="wln-BE"
               >èsse intrè deûs sèles yè 'l cu al têre </em
-            >: être devant un choix difficile. Y<em lang="wln-BE"
-              >èsse avu 'l cu dins 'l bûre</em
-            > : financièrement à l'aise.
+            >: être devant un choix difficile.
+            <em lang="wln-BE">Yèsse avu 'l cu dins 'l bûre</em> : financièrement
+            à l'aise.
             <em lang="wln-BE">I n' faut ni èrniyi 's cu pou 'ne vèsse </em>: il
             ne faut pas jeter le bébé avec l'eau du bain.
             <em lang="wln-BE"
@@ -3585,8 +3586,9 @@
           </p>
           <p>
             <strong>désavantage</strong
-            ><em lang="wln-BE">, dèsavantâdje,</em> n.m. Y<em lang="wln-BE"
-              >èsse trop mégue, c'est souvint in dèsavantâdje, trop cras
+            ><em lang="wln-BE">, dèsavantâdje,</em> n.m.
+            <em lang="wln-BE"
+              >Yèsse trop mégue, c'est souvint in dèsavantâdje, trop cras
               ètou</em
             >.
           </p>
@@ -3873,9 +3875,10 @@
           </p>
           <p>
             <strong>désoeuvré</strong>, <strong>e</strong
-            ><em lang="wln-BE">, dèseûvré, ye,</em> adj. Y<em lang="wln-BE"
-              >èsse dèseûvré, ça n' min</em
-            >.<em lang="wln-BE">ne à ri d' bon</em>.
+            ><em lang="wln-BE">, dèseûvré, ye,</em> adj.
+            <em lang="wln-BE">Yèsse dèseûvré, ça n' min</em>.<em lang="wln-BE"
+              >ne à ri d' bon</em
+            >.
           </p>
           <p>
             <strong>désoeuvrement</strong
@@ -4281,8 +4284,9 @@
           <p>
             <strong>détritus</strong>, <em lang="wln-BE">dètritus,</em> n.m.,
             <em lang="wln-BE">salopriye, misère,</em> n.f.
-            <em lang="wln-BE">A</em> Y<em lang="wln-BE"
-              >ite, on vwèt sacans djins taper leûs salopriyes dins lès
+            <em lang="wln-BE">A</em>
+            <em lang="wln-BE"
+              >Yite, on vwèt sacans djins taper leûs salopriyes dins lès
               uréles</em
             >. <em lang="wln-BE">Ké dès yoûrds boucs !</em>
           </p>
@@ -5376,9 +5380,8 @@
           </p>
           <p>
             <strong>disponibilité</strong
-            ><em lang="wln-BE">, disponibilité,</em> n.f. Y<em lang="wln-BE"
-              >èsse in disponi-bilité</em
-            >.
+            ><em lang="wln-BE">, disponibilité,</em> n.f.
+            <em lang="wln-BE">Yèsse in disponi-bilité</em>.
             <em lang="wln-BE"
               >Quand c'est pou assister les maleûreûs, il a toudi dès cis qui
               n'ont pon d' disponibilité</em
@@ -6039,8 +6042,9 @@
             <em lang="wln-BE">I dmeûre à In</em>.<em lang="wln-BE"
               >nuyères mins sès djètwêres</em
             >
-            (ruches) <em lang="wln-BE">sonsst' à</em> Y<em lang="wln-BE"
-              >ite, Vèznau, Tubisse, yè co à d'z-autes places</em
+            (ruches) <em lang="wln-BE">sonsst' à</em>
+            <em lang="wln-BE"
+              >Yite, Vèznau, Tubisse, yè co à d'z-autes places</em
             >.
           </p>
           <p>
@@ -6284,10 +6288,10 @@
               lang="wln-BE"
               >èsse doûb',</em
             >
-            au jeu de cartes : ne faire aucun pli. Y<em lang="wln-BE"
-              >èsse doub' à l'as </em
-            >: pour un échec pénible, en rapport au jeu de cartes où un joueur
-            ne ramasse aucun pli malgré la présence d'un as dans son jeu.
+            au jeu de cartes : ne faire aucun pli.
+            <em lang="wln-BE">Yèsse doub' à l'as </em>: pour un échec pénible,
+            en rapport au jeu de cartes où un joueur ne ramasse aucun pli malgré
+            la présence d'un as dans son jeu.
           </p>
           <p>
             <strong>doublé</strong>, plaqué (or),
@@ -6604,11 +6608,11 @@
           </p>
           <p>
             <strong>drap</strong><em lang="wln-BE">, drap,</em> n.m.
-            <em lang="wln-BE">Candji lès draps du lit</em>. Y<em lang="wln-BE"
-              >èsse dins dès bias draps</em
-            >. <em lang="wln-BE">Èrtimer dès draps d' lit </em>: couper les
-            draps dans le sens de la longueur et les recoudre par les bords
-            extérieurs pour leur donner une deuxième vie.
+            <em lang="wln-BE">Candji lès draps du lit</em>.
+            <em lang="wln-BE">Yèsse dins dès bias draps</em>.
+            <em lang="wln-BE">Èrtimer dès draps d' lit </em>: couper les draps
+            dans le sens de la longueur et les recoudre par les bords extérieurs
+            pour leur donner une deuxième vie.
           </p>
           <p><strong>drapage</strong>, <em lang="wln-BE">drapâdje,</em> n.m.</p>
           <p>
@@ -6892,9 +6896,9 @@
           </p>
           <p>
             <strong>dur</strong>, <em lang="wln-BE">dûr, dûre</em> ou
-            <em lang="wln-BE">durte,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse dins 'l dûr</em
-            >. <em lang="wln-BE">Avwêr dûr</em>.
+            <em lang="wln-BE">durte,</em> adj. et n.
+            <em lang="wln-BE">Yèsse dins 'l dûr</em>.
+            <em lang="wln-BE">Avwêr dûr</em>.
             <em lang="wln-BE"
               >Quand i fét trop tchaud, on a dûr à travayi dins 's djârdin.
               Intinde dûr</em
@@ -6991,8 +6995,8 @@
             Vianden, Diekirch, Luxembourg, Maroille, Montmedy, Herbeu-mont,
             Neufchateau, Givet.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
