--- a/E.html
+++ b/E.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre E</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre E</h1>
           <p>
             <strong>eau</strong>, <em lang="wln-BE">eûye, iau</em>,
             <em lang="wln-BE">eûwe</em> (rare).
@@ -398,8 +398,8 @@
               >Branmin dès motociclisses ont candji leû n-èchap'mint</em
             >.
             <em lang="wln-BE">Dinsi, on lès intind à dès kilomètes lon !</em>
-            Y<em lang="wln-BE"
-              >è tant pîre pou lès cis qu'is rinvèye à toutes lès eûres dèl
+            <em lang="wln-BE"
+              >Yè tant pîre pou lès cis qu'is rinvèye à toutes lès eûres dèl
               nûte</em
             >. <em lang="wln-BE">Ké polucion !</em>
           </p>
@@ -812,9 +812,9 @@
           </p>
           <p>
             <strong>écorce</strong
-            ><em lang="wln-BE">, èscoûrce, pèlate,</em> n.f. Y<em lang="wln-BE"
-              >èsse intrè l'ârbe yè 'l pèlate</em
-            >. <em lang="wln-BE">Glichi su 'ne pèlate dè banane</em>. Rv.
+            ><em lang="wln-BE">, èscoûrce, pèlate,</em> n.f.
+            <em lang="wln-BE">Yèsse intrè l'ârbe yè 'l pèlate</em>.
+            <em lang="wln-BE">Glichi su 'ne pèlate dè banane</em>. Rv.
             <em lang="wln-BE">Ène grande pèlate </em>: femme grande et mince.
           </p>
           <p>
@@ -1196,9 +1196,8 @@
           <p>
             <strong>éducateur</strong>, <strong>trice</strong
             ><em lang="wln-BE">, èducateûr, èducatrice,</em> n.m.
-            <em lang="wln-BE">à</em> Y<em lang="wln-BE"
-              >ite, il avoût in n-èducateûr dè rûwe</em
-            >.
+            <em lang="wln-BE">à</em>
+            <em lang="wln-BE">Yite, il avoût in n-èducateûr dè rûwe</em>.
           </p>
           <p>
             <strong>éducation</strong><em lang="wln-BE">, èducâcion,</em> n.f.
@@ -2046,9 +2045,8 @@
           <p>
             <strong>embêtement</strong>,
             <em lang="wln-BE">imbétemint, imbét'mint</em>,
-            <em lang="wln-BE">inmèrdèmint</em>, n.m. Y<em lang="wln-BE"
-              >èsse dins lès imbét'mints</em
-            >.
+            <em lang="wln-BE">inmèrdèmint</em>, n.m.
+            <em lang="wln-BE">Yèsse dins lès imbét'mints</em>.
           </p>
           <p>
             <strong>embêter</strong>,
@@ -2191,7 +2189,7 @@
             <strong>embrener</strong><em lang="wln-BE">,</em> salir, souiller<em
               lang="wln-BE"
               >, imbèrner</em
-            >. Y<em lang="wln-BE">èsse imbèrné pa lès bèrdouyes</em>.
+            >. <em lang="wln-BE">Yèsse imbèrné pa lès bèrdouyes</em>.
           </p>
           <p>
             <strong>embrigader</strong>, <em lang="wln-BE">imbrigader</em>.
@@ -2323,9 +2321,8 @@
           </p>
           <p>
             <strong>emmancher</strong>, <em lang="wln-BE">inmanchi</em>.
-            <em lang="wln-BE">Inmanchi in n-osti</em>. Y<em lang="wln-BE"
-              >èsse inmanchi </em
-            >: être en position difficile.
+            <em lang="wln-BE">Inmanchi in n-osti</em>.
+            <em lang="wln-BE">Yèsse inmanchi </em>: être en position difficile.
           </p>
           <p>
             <strong>emmancheur</strong>, <em lang="wln-BE">inmancheû</em>, n.m.
@@ -4907,9 +4904,9 @@
           <p>
             <strong>épine</strong
             ><em lang="wln-BE">, (è)spène, pipike</em> (enfant.), n.f.,
-            <em lang="wln-BE">picot,</em> n.m. Y<em lang="wln-BE"
-              >èsse piki pa dès èspènes dè fourdènes</em
-            >. Y<em lang="wln-BE">èsse grawé pa lès picots dès ronches</em>. Rv.
+            <em lang="wln-BE">picot,</em> n.m.
+            <em lang="wln-BE">Yèsse piki pa dès èspènes dè fourdènes</em>.
+            <em lang="wln-BE">Yèsse grawé pa lès picots dès ronches</em>. Rv.
             <em lang="wln-BE">Avwêr ène tièsse come in buchon d'èspènes </em>:
             pour une chevelure enchevêtrée. On entend aussi :
             <em lang="wln-BE">avez sté au spèctake du pètomane !</em>
@@ -5127,9 +5124,9 @@
           </p>
           <p>
             <strong>équilibre</strong><em lang="wln-BE">, èkilib',</em> n.m.
-            <em lang="wln-BE">Pièrde l'èkilib'</em>. Rv. Y<em lang="wln-BE"
-              >èsse à djidjipe </em
-            >: être en équilibre instable.
+            <em lang="wln-BE">Pièrde l'èkilib'</em>. Rv.
+            <em lang="wln-BE">Yèsse à djidjipe </em>: être en équilibre
+            instable.
           </p>
           <p>
             <strong>équilibrer</strong>, <em lang="wln-BE">èkilibrer</em>.
@@ -5573,8 +5570,8 @@
             <em lang="wln-BE"
               >Minme lès vatches èspagnoles asprouv' dè pârler francès !</em
             >
-            Y<em lang="wln-BE"
-              >è vous, kè ratindez pou aprinde vos vatches à pârler
+            <em lang="wln-BE"
+              >Yè vous, kè ratindez pou aprinde vos vatches à pârler
               èspagnol ?</em
             >
           </p>
@@ -6316,11 +6313,12 @@
           <p>
             <strong>être</strong><em lang="wln-BE">, yèsse</em> (on entend aussi
             <em lang="wln-BE">yète)</em>.
-            <em lang="wln-BE">C'esst'in bon gamin</em>. Y<em lang="wln-BE"
-              >èsse dins 'l bon</em
-            >. N'est-ce pas : <em lang="wln-BE">èn'do, 'ndo, èno</em>. Être à
-            quia, bloqué<em>, yèsse à broke</em>. Être dépaysé, décontenancé :
-            <em lang="wln-BE">yèsse banôle</em>. Jouir de toutes ses capacités :
+            <em lang="wln-BE">C'esst'in bon gamin</em>.
+            <em lang="wln-BE">Yèsse dins 'l bon</em>. N'est-ce pas :
+            <em lang="wln-BE">èn'do, 'ndo, èno</em>. Être à quia, bloqué<em
+              >, yèsse à broke</em
+            >. Être dépaysé, décontenancé : <em lang="wln-BE">yèsse banôle</em>.
+            Jouir de toutes ses capacités :
             <em lang="wln-BE">yèsse dins 's n-intièr</em>. Comment cela
             ira-t-il ? : <em lang="wln-BE">coumint ça dira-t-i </em>? Où est-il
             parti ? : <em lang="wln-BE">ayusk'il est vwèye </em>? Qui est-ce qui
@@ -6409,7 +6407,7 @@
             Rv.
             <em lang="wln-BE"
               >Il a sti ruwé à l'uch come in brin d' tcha su 'ne palète</em
-            >. Y<em lang="wln-BE">èsse fièr come in brin su 'ne ruke</em>.
+            >. <em lang="wln-BE">Yèsse fièr come in brin su 'ne ruke</em>.
             Plaisam.<em>, in n-aveûle, ène sintinèle, in n-évèke ( !?)</em>.
             <em lang="wln-BE">Du stron d' pouye </em>:
             <em lang="wln-BE">sirope dè Liéje avu dèl makéye</em>.
@@ -7308,9 +7306,8 @@
           </p>
           <p>
             <strong>extrème</strong>, <strong>à l'</strong>,
-            <em lang="wln-BE">èstrinme</em>. Y<em lang="wln-BE"
-              >èsse à l'èstrinme limite</em
-            >.
+            <em lang="wln-BE">èstrinme</em>.
+            <em lang="wln-BE">Yèsse à l'èstrinme limite</em>.
           </p>
           <p>
             <strong>extrêmement</strong>,
@@ -7330,8 +7327,8 @@
             <em lang="wln-BE">Ça fét lonmin qu'il a jubilé, savè !</em>
           </p>
           <p><em lang="wln-BE">Mins ça pût candji !</em></p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <section
       id="footnotes"
@@ -7341,14 +7338,10 @@
       <div class="container">
         <ol>
           <li id="fn3">
-            <p>
-              <em lang="wln-BE">Poréye</em> pour poirée ou bette.
-              <em lang="wln-BE">Ounène</em> pour chenille
-              <em lang="wln-BE">(oulène</em> à Ittre<em lang="wln-BE">)</em
-              ><a href="#fnref3" class="footnote-back" role="doc-backlink"
-                >↩︎</a
-              >
-            </p>
+            <em lang="wln-BE">Poréye</em> pour poirée ou bette.
+            <em lang="wln-BE">Ounène</em> pour chenille
+            <em lang="wln-BE">(oulène</em> à Ittre<em lang="wln-BE">)</em
+            ><a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a>
           </li>
         </ol>
       </div>
