--- a/F.html
+++ b/F.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre F</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre F</h1>
           <p>
             <strong>f</strong>, remplace ph.
             <em lang="wln-BE">Daler al farmas'riye</em>.
@@ -310,9 +310,8 @@
             <em lang="wln-BE">fangn'</em>, n.m.f.
             <em lang="wln-BE">Mindji à 's faim</em>.
             <em lang="wln-BE">Avwêr faim</em>.
-            <em lang="wln-BE">Il a toudi fangn'</em>. Y<em lang="wln-BE"
-              >èsse bleû d' fangn'</em
-            >.
+            <em lang="wln-BE">Il a toudi fangn'</em>.
+            <em lang="wln-BE">Yèsse bleû d' fangn'</em>.
           </p>
           <p>
             Rv. <em lang="wln-BE">Dj'ai faim !</em> Répl.<em lang="wln-BE"
@@ -449,8 +448,9 @@
             <em lang="wln-BE">I va falwêr taper d'su pou avwêr fini au nût'</em
             >. <em lang="wln-BE">I faura daler à pîd 'squ' à l'èglîje</em>. Peu
             s'en est fallu<em lang="wln-BE"> </em>:
-            <em lang="wln-BE">bî manki</em>. Y<em lang="wln-BE"
-              >è 'l famîye, ça va ? Bouf, i faut bî tout ! Pou comprinde ç-qu'i
+            <em lang="wln-BE">bî manki</em>.
+            <em lang="wln-BE"
+              >Yè 'l famîye, ça va ? Bouf, i faut bî tout ! Pou comprinde ç-qu'i
               dit, i faut bî tout</em
             >.
           </p>
@@ -1430,9 +1430,9 @@
             œuf ou comme dans oeufs), n.m. <em lang="wln-BE">Fé du feu</em>.
             <em lang="wln-BE">In feu d' paye</em>.
             <em lang="wln-BE">Fé long feu</em>.
-            <em lang="wln-BE">Ratchi du feu</em>. Y<em lang="wln-BE"
-              >èsse tout feu tout flame</em
-            >. <em lang="wln-BE">Mète ès' main au feu</em>.
+            <em lang="wln-BE">Ratchi du feu</em>.
+            <em lang="wln-BE">Yèsse tout feu tout flame</em>.
+            <em lang="wln-BE">Mète ès' main au feu</em>.
             <em lang="wln-BE">Avwêr èl feu ène sadju</em>.
             <em lang="wln-BE">I n'a pon d' fumière sins feu</em>. Se démener :
             <em lang="wln-BE">fé feu dès kate pates yè dèl keûye</em>.
@@ -1573,9 +1573,8 @@
           </p>
           <p>
             <strong>fichu</strong>, <strong>e</strong>,
-            <em lang="wln-BE">foutu, we,</em> adj. Y<em lang="wln-BE"
-              >èsse mau foutu</em
-            >.
+            <em lang="wln-BE">foutu, we,</em> adj.
+            <em lang="wln-BE">Yèsse mau foutu</em>.
             <em lang="wln-BE">Ène foutuwe bièsse qui n' comprind ri à ri</em>.
             <em lang="wln-BE">Èle a in foutu caractére !</em> Rv. Il est foutu :
             <em lang="wln-BE">il est capoute</em> (mort ou moribond).
@@ -2024,8 +2023,9 @@
           </p>
           <p>
             <strong>finir</strong>, <em lang="wln-BE">fini</em>.
-            <em lang="wln-BE">Fini 's bèsogne</em>. Y<em lang="wln-BE"
-              >è pou fini, on fét kè ? I fauroût qu' l'ivièr finiche pus
+            <em lang="wln-BE">Fini 's bèsogne</em>.
+            <em lang="wln-BE"
+              >Yè pou fini, on fét kè ? I fauroût qu' l'ivièr finiche pus
               timpe</em
             >.
           </p>
@@ -2110,9 +2110,8 @@
             <strong>fixe</strong><em lang="wln-BE">, fixe,</em> adj.
             <em lang="wln-BE"
               >Èl tram avoût dès arèts fixes yè dès facultatifs</em
-            >. <em lang="wln-BE">Avwêr ène idéye fixe</em>. Y<em lang="wln-BE"
-              >èsse in pôsicion fixe</em
-            >.
+            >. <em lang="wln-BE">Avwêr ène idéye fixe</em>.
+            <em lang="wln-BE">Yèsse in pôsicion fixe</em>.
           </p>
           <p>
             <strong>fixement</strong><em lang="wln-BE">, fixèmint,</em> adv.
@@ -2161,7 +2160,7 @@
           </p>
           <p>
             <strong>flagrant</strong>, <strong>e</strong>, flagrant, e, adj.
-            Y<em lang="wln-BE">èsse pris in flagrant délit d' mintriye</em>.
+            <em lang="wln-BE">Yèsse pris in flagrant délit d' mintriye</em>.
             <em lang="wln-BE">Ène èreûr flagrante</em>.
           </p>
           <p>
@@ -2247,9 +2246,9 @@
           </p>
           <p>
             <strong>flamme</strong>, <em lang="wln-BE">flame,</em> n.f.
-            <em lang="wln-BE">Ène bèle flame</em>. Y<em lang="wln-BE"
-              >èsse tout feu tout flame</em
-            >. <em lang="wln-BE">Vos vîrez lès flames dè l'infièr</em>.
+            <em lang="wln-BE">Ène bèle flame</em>.
+            <em lang="wln-BE">Yèsse tout feu tout flame</em>.
+            <em lang="wln-BE">Vos vîrez lès flames dè l'infièr</em>.
           </p>
           <p>
             <strong>flammèche</strong><em lang="wln-BE">, flamache,</em> n.f.
@@ -2808,9 +2807,8 @@
           </p>
           <p>
             <strong>fonctionnaire</strong
-            ><em lang="wln-BE">, foncsionére,</em> n.m.f. Y<em lang="wln-BE"
-              >èsse foncsionére pou l' Ètat</em
-            >.
+            ><em lang="wln-BE">, foncsionére,</em> n.m.f.
+            <em lang="wln-BE">Yèsse foncsionére pou l' Ètat</em>.
           </p>
           <p>
             <strong>fonctionnement</strong>,
@@ -3302,7 +3300,7 @@
               >fou, fole, sot, e, pèté, ye, trwès-kârts, poki, pokéye, ni tout
               djusse,</em
             >
-            adj. et n. Y<em lang="wln-BE">èsse sot après 'ne coumère</em>.
+            adj. et n. <em lang="wln-BE">Yèsse sot après 'ne coumère</em>.
             <em lang="wln-BE">Roûler come in pèté</em>.
             <em lang="wln-BE">Il est fou à louyi</em>.
             <em lang="wln-BE">I n'est ni tout djusse ! C'èsst'in trwès-kârts</em
@@ -4149,9 +4147,8 @@
             n.f. <em lang="wln-BE">Èl gamin est toudi dins sès fèrdin</em>.<em
               lang="wln-BE"
               >nes</em
-            >. <em lang="wln-BE">I fét toudi dès siènes</em>. Y<em lang="wln-BE"
-              >è vous, avez co fét dès votes</em
-            >
+            >. <em lang="wln-BE">I fét toudi dès siènes</em>.
+            <em lang="wln-BE">Yè vous, avez co fét dès votes</em>
             ou
             <em lang="wln-BE">dès vôles ?</em>
           </p>
@@ -4446,9 +4443,8 @@
           <p>
             <strong>frisé</strong>, <strong>e</strong>,
             <em lang="wln-BE">frîji, frîjéye, crolé, croléye,</em> adj.
-            <em lang="wln-BE">Avwêr dès tch'feûs frîjis</em>. Y<em lang="wln-BE"
-              >èsse crolé</em
-            >.
+            <em lang="wln-BE">Avwêr dès tch'feûs frîjis</em>.
+            <em lang="wln-BE">Yèsse crolé</em>.
           </p>
           <p>
             <strong>friser</strong>, <em lang="wln-BE">frîji, croler</em>.
@@ -4491,8 +4487,9 @@
           </p>
           <p>
             <strong>frite</strong>, <em lang="wln-BE">frite</em>, adj. et n.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, au kinje d'awouss' on va al fritur' avu 2</em
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE"
+              >Yite, au kinje d'awouss' on va al fritur' avu 2</em
             >.<em lang="wln-BE"
               >50 eûros pou acater in saclot d' frites dè ducasse</em
             >.
@@ -4707,8 +4704,9 @@
           </p>
           <p>
             <strong>frotteur</strong>, <strong>euse</strong
-            ><em lang="wln-BE">, froteû, se,</em> n.m.f. Y<em lang="wln-BE"
-              >ves, ç-astoût èl pus grand froteû d' manse dèl classe, toudi à
+            ><em lang="wln-BE">, froteû, se,</em> n.m.f.
+            <em lang="wln-BE"
+              >Yves, ç-astoût èl pus grand froteû d' manse dèl classe, toudi à
               blagui avu 'l mésse</em
             >.
             <em lang="wln-BE">Dèsfacer in tablau nwêr avu 'l froteû in feûte</em
@@ -4998,8 +4996,8 @@
               >Counichiz 'l futûr, vous ? Èl prézint èyè 'l futûr</em
             >.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
