--- a/G.html
+++ b/G.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre G</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre G</h1>
           <p>
             <strong>gabardine</strong>, <em lang="wln-BE">gabardine,</em> n.f.,
             plais., <em lang="wln-BE">waterproute,</em> n.m.
@@ -634,9 +634,8 @@
           <p>
             <strong>gardien</strong>, <strong>ne</strong>,
             <em lang="wln-BE">gardyin, diène,</em> n.m.f.
-            <em lang="wln-BE">Lès gardyins dèl prîjon d'</em> Y<em lang="wln-BE"
-              >ite sont co in gréve !</em
-            >
+            <em lang="wln-BE">Lès gardyins dèl prîjon d'</em>
+            <em lang="wln-BE">Yite sont co in gréve !</em>
           </p>
           <p>
             <strong>gardon</strong> à nageoires rouges,
@@ -672,8 +671,9 @@
           <p>
             <strong>gargouille</strong><em lang="wln-BE">, gârgouye,</em> n.f.
             <em lang="wln-BE">Chériye, vos stez bèle come ène gârgouye !</em>
-            Répl. Y<em lang="wln-BE"
-              >è vous, vos stez bia come in camion à z-oûrdur' ! Là-t'tè !</em
+            Répl.
+            <em lang="wln-BE"
+              >Yè vous, vos stez bia come in camion à z-oûrdur' ! Là-t'tè !</em
             >
           </p>
           <p>
@@ -1105,9 +1105,9 @@
           </p>
           <p>
             <strong>gendarmerie</strong>,
-            <em lang="wln-BE">jandarmèriye,</em> n.f.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, èl jan-darmèriye astoût d' aboûrd al ruwe dès Moulins, yè
+            <em lang="wln-BE">jandarmèriye,</em> n.f. <em lang="wln-BE">À</em>
+            <em lang="wln-BE"
+              >Yite, èl jan-darmèriye astoût d' aboûrd al ruwe dès Moulins, yè
               après, al ruwe Waute</em
             >.
           </p>
@@ -1132,7 +1132,7 @@
           <p>
             <strong>gêné</strong>, <em lang="wln-BE">jin</em>.<em lang="wln-BE"
               >né, ye, djin</em
-            >.<em>né, ye,</em> adj. Y<em lang="wln-BE">èsse jin</em>.<em
+            >.<em>né, ye,</em> adj. <em lang="wln-BE">Yèsse jin</em>.<em
               lang="wln-BE"
               >né dins 'ne tchèmîse trop strwète</em
             >. Rv. <em lang="wln-BE">In jin</em>.<em lang="wln-BE"
@@ -1152,9 +1152,8 @@
           </p>
           <p>
             <strong>général</strong>, <strong>e</strong
-            ><em lang="wln-BE">, jènèral, e,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse prèmi au class'mint jènèral</em
-            >.
+            ><em lang="wln-BE">, jènèral, e,</em> adj. et n.
+            <em lang="wln-BE">Yèsse prèmi au class'mint jènèral</em>.
             <em lang="wln-BE">In jènèral, dji vwès pus volti lès blondes</em>.
             <em lang="wln-BE">Lès jènèrals dè l'arméye</em>.
           </p>
@@ -1525,8 +1524,9 @@
           <p>
             <strong>girouette</strong>, <em lang="wln-BE">djirouwète,</em> n.f.,
             <em lang="wln-BE">clipotia</em> (rare), n.m.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, quand 'l djirouwète dè l'èglîje raguid' l' Estaminet, c'est
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE"
+              >Yite, quand 'l djirouwète dè l'èglîje raguid' l' Estaminet, c'est
               qu'il a swè</em
             >. Note : l'Estaminet se trouvant à l'ouest de l'église, le coq
             regarde la pluie arriver de cette direction.
@@ -1767,8 +1767,8 @@
           </p>
           <p>
             <strong>glouglou</strong><em lang="wln-BE">, glouglou,</em> n.m.
-            Y<em lang="wln-BE"
-              >è glouglouglou, asteur, il est dès nô-ôles, alez, tchantez !</em
+            <em lang="wln-BE"
+              >Yè glouglouglou, asteur, il est dès nô-ôles, alez, tchantez !</em
             >. <em lang="wln-BE">Dj'intinds dès glouglous dins vo stoumak</em>.
           </p>
           <p>
@@ -1847,8 +1847,9 @@
           </p>
           <p>
             <strong>goal</strong>, <em lang="wln-BE">gôl,</em> n.m.
-            <em lang="wln-BE">Inviè 1970,</em> Y<em lang="wln-BE"
-              >ite a doné sès montants d'gôls à prèsti à lès cîs d' Bolozak qui
+            <em lang="wln-BE">Inviè 1970,</em>
+            <em lang="wln-BE"
+              >Yite a doné sès montants d'gôls à prèsti à lès cîs d' Bolozak qui
               n'ont jamé volu nos lès rinde</em
             >.
             <em lang="wln-BE"
@@ -2578,9 +2579,9 @@
           <p>
             <strong>grand-route</strong><em lang="wln-BE">, pavé</em>, n.m.,
             <em lang="wln-BE">pavéye</em>, n.f.
-            <em lang="wln-BE">Èl pavé qui va dè</em> Y<em lang="wln-BE"
-              >ite à Skimpont</em
-            >. <em lang="wln-BE">Èl pavéye qui va dè Hal à Nivèle</em>.
+            <em lang="wln-BE">Èl pavé qui va dè</em>
+            <em lang="wln-BE">Yite à Skimpont</em>.
+            <em lang="wln-BE">Èl pavéye qui va dè Hal à Nivèle</em>.
             Commentaire : l'usage tend à démontrer que « <em lang="wln-BE"
               >èl pavé »</em
             > désigne un chemin pavé, tandis qu' « <em lang="wln-BE"
@@ -2641,9 +2642,9 @@
           </p>
           <p>
             <strong>gras</strong>, <strong>se</strong>,
-            <em lang="wln-BE">cras, se,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse cras come in mwène</em
-            >. <em lang="wln-BE">On va à Binche fé 'l Cras Mardi</em>.
+            <em lang="wln-BE">cras, se,</em> adj. et n.
+            <em lang="wln-BE">Yèsse cras come in mwène</em>.
+            <em lang="wln-BE">On va à Binche fé 'l Cras Mardi</em>.
             <em lang="wln-BE"
               >C'est ni in chuchant 'l vèra d' l'uch qu'on d'vît cras</em
             >.
@@ -3906,8 +3907,8 @@
             ><em lang="wln-BE">, jim'nastike,</em> n.f.
             <em lang="wln-BE">Fé dèl jim'nastike pou dmeurer in foûrme</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
