--- a/H.html
+++ b/H.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre H</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre H</h1>
           <p>
             <strong>H</strong> cette lettre n'étant pas « aspirée » à Ittre,
             elle n'apparaît donc pas dans notre graphie wallonne phonétique,
@@ -121,9 +121,8 @@
           <p>
             <strong>habitant</strong>, <strong>e</strong>,
             <em lang="wln-BE">abitant, e,</em> n.m.f.
-            <em lang="wln-BE">Èl 01/12/2020,</em> Y<em lang="wln-BE"
-              >ite comptoût 7037 abitants</em
-            >.
+            <em lang="wln-BE">Èl 01/12/2020,</em>
+            <em lang="wln-BE">Yite comptoût 7037 abitants</em>.
             <em lang="wln-BE"
               >Djan-Djan, c'est 'l pus vî dès abitants d' Nivèle</em
             >. V. commune.
@@ -147,9 +146,8 @@
           <p>
             <strong>habitué</strong>, <strong>e</strong>,
             <em lang="wln-BE">abituwé, ye,</em> adj. et n.
-            <em lang="wln-BE">Lès abituwés du cabarèt</em>. Y<em lang="wln-BE"
-              >èsse abituwé come in tchi à sès puces</em
-            >.
+            <em lang="wln-BE">Lès abituwés du cabarèt</em>.
+            <em lang="wln-BE">Yèsse abituwé come in tchi à sès puces</em>.
           </p>
           <p>
             <strong>habituel</strong>, <strong>le</strong>,
@@ -463,9 +461,8 @@
             <strong>hareng</strong>, <em lang="wln-BE">èrin,</em> n.m. Pour une
             personne très amaigrie :
             <em lang="wln-BE">i rchène à in n-èrin scapé du carème !,</em>
-            allusion à un hareng resté invendu. Rv. Y<em lang="wln-BE"
-              >èsse paktés come dès èrins dins 'ne cârtèle</em
-            >.
+            allusion à un hareng resté invendu. Rv.
+            <em lang="wln-BE">Yèsse paktés come dès èrins dins 'ne cârtèle</em>.
           </p>
           <p>
             <strong>hargneux</strong>, <strong>se</strong
@@ -821,7 +818,7 @@
             <em lang="wln-BE">Èl pètit Inri dèmeuroût à Jacquèt</em>.
           </p>
           <p><strong>Henriette</strong>, <em lang="wln-BE">Riyète</em>.</p>
-          <p><strong>Hep !</strong> Y<em lang="wln-BE">eup' !</em></p>
+          <p><strong>Hep !</strong> <em lang="wln-BE">Yeup' !</em></p>
           <p>
             <strong>herbe</strong>, <em lang="wln-BE">yèrbe,</em> n.f.
             <em lang="wln-BE">Lès vatches ont tout mindji l'yèrbe du pachi</em>.
@@ -946,10 +943,10 @@
           <p>
             <strong>hésiter</strong>,
             <em lang="wln-BE">balziner, léziner, balanci</em>.
-            <em lang="wln-BE">I balzine toudi pou tout</em>. Y<em lang="wln-BE"
-              >èsse intrè deûs sèles, èl cu al têre</em
-            >. Ne pas hésiter : <em lang="wln-BE">n' fé ni yone ni deûs</em>.
-            Rv. A l'adresse de quelqu'un qui hésite longuement :
+            <em lang="wln-BE">I balzine toudi pou tout</em>.
+            <em lang="wln-BE">Yèsse intrè deûs sèles, èl cu al têre</em>. Ne pas
+            hésiter : <em lang="wln-BE">n' fé ni yone ni deûs</em>. Rv. A
+            l'adresse de quelqu'un qui hésite longuement :
             <em lang="wln-BE">yè adon, c'est pou punre ou pou couver ?</em>
           </p>
           <p>
@@ -987,9 +984,9 @@
           </p>
           <p>
             <strong>heureux</strong>, <strong>euse</strong>,
-            <em lang="wln-BE">eûreû, se,</em> adj. Y<em lang="wln-BE"
-              >èsse eûreû come in pèchon dins l'eûye</em
-            >. <em lang="wln-BE">Adon, eûreûse ?</em> Rép.
+            <em lang="wln-BE">eûreû, se,</em> adj.
+            <em lang="wln-BE">Yèsse eûreû come in pèchon dins l'eûye</em>.
+            <em lang="wln-BE">Adon, eûreûse ?</em> Rép.
             <em lang="wln-BE"
               >Dji l' sârai co d' pus quand vos m'ârez payi ène Ferrari !</em
             >
@@ -1380,9 +1377,9 @@
           </p>
           <p>
             <strong>hors</strong><em lang="wln-BE">, oûr, woûr</em>.
-            <em lang="wln-BE">I stoût woûr dè li</em>. Y<em lang="wln-BE"
-              >èsse woûr dè danjer</em
-            >. <em lang="wln-BE">Èl mur' est woûr d'èkére</em>.
+            <em lang="wln-BE">I stoût woûr dè li</em>.
+            <em lang="wln-BE">Yèsse woûr dè danjer</em>.
+            <em lang="wln-BE">Èl mur' est woûr d'èkére</em>.
             <em lang="wln-BE"
               >Acater ène auto élèctrike, pou 'l moumint, c'est woûr dè prix</em
             >.
@@ -1896,8 +1893,8 @@
               istérike</em
             >.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
