--- a/I.html
+++ b/I.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre I</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre I</h1>
           <p>
             <strong>I</strong>, <strong>î</strong>,
             <em lang="wln-BE"
@@ -846,8 +846,9 @@
           </p>
           <p>
             <strong>impossibilité</strong>,
-            <em lang="wln-BE">impossibilité,</em> n.f. Y<em lang="wln-BE"
-              >èsse dins l'impossibilité dè rèsponde au tèlèfone</em
+            <em lang="wln-BE">impossibilité,</em> n.f.
+            <em lang="wln-BE"
+              >Yèsse dins l'impossibilité dè rèsponde au tèlèfone</em
             >.
           </p>
           <p>
@@ -1603,9 +1604,9 @@
           </p>
           <p>
             <strong>indifférent</strong>, <strong>e</strong
-            ><em lang="wln-BE">, indiférint, e,</em> adj. Y<em lang="wln-BE"
-              >èsse indiférint au maleûr dès autes</em
-            >. Cela m'est indifférent :
+            ><em lang="wln-BE">, indiférint, e,</em> adj.
+            <em lang="wln-BE">Yèsse indiférint au maleûr dès autes</em>. Cela
+            m'est indifférent :
             <em lang="wln-BE"
               >pour mi, c'est dès gayes, dj'inme austant vatche què via, ça n'mè
               fét ni in pli à 'm tchausse !</em
@@ -2285,9 +2286,8 @@
           </p>
           <p>
             <strong>injustement</strong
-            ><em lang="wln-BE">, indjustèmint</em> adv. Y<em lang="wln-BE"
-              >èsse indjustèmint puni, ça fait co pus mau</em
-            >.
+            ><em lang="wln-BE">, indjustèmint</em> adv.
+            <em lang="wln-BE">Yèsse indjustèmint puni, ça fait co pus mau</em>.
           </p>
           <p>
             <strong>injustice</strong><em lang="wln-BE">, indjustice,</em> n.m.
@@ -3837,8 +3837,8 @@
           <p>
             <strong>ivrognerie</strong><em lang="wln-BE">, soûl'rîye,</em> n.f.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
