--- a/J.html
+++ b/J.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre J</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre J</h1>
           <p><strong>jabot</strong>, <em lang="wln-BE">malète,</em> n.f.</p>
           <p>
             <strong>jaboter</strong>, caqueter, cancaner,
@@ -649,9 +649,8 @@
           </p>
           <p>
             <strong>Jodoigne</strong>, <em lang="wln-BE">Djodogne</em>.
-            <em lang="wln-BE">Dè</em> Y<em lang="wln-BE"
-              >ite à Djodogne, i n'a pon d' route dirèk'</em
-            >.
+            <em lang="wln-BE">Dè</em>
+            <em lang="wln-BE">Yite à Djodogne, i n'a pon d' route dirèk'</em>.
           </p>
           <p>
             <strong>joie</strong><em lang="wln-BE">, jwè, jwèy', djwè,</em> n.f.
@@ -874,9 +873,9 @@
           <p>
             <strong>jour</strong>, <em lang="wln-BE">djoû,</em> n.m.
             <em lang="wln-BE">In bia djoû</em>. Un jour ouvrable,
-            <em lang="wln-BE">am'djoû</em>. Y<em lang="wln-BE"
-              >un d' cès djoûs, djè dirai in condji</em
-            >. <em lang="wln-BE">Èl djoû d'après, èl djoû d'avant</em>. En plein
+            <em lang="wln-BE">am'djoû</em>.
+            <em lang="wln-BE">Yun d' cès djoûs, djè dirai in condji</em>.
+            <em lang="wln-BE">Èl djoû d'après, èl djoû d'avant</em>. En plein
             jour : <em lang="wln-BE">plin djoû, plin</em>.<em lang="wln-BE"
               >ne eûre</em
             >. A la pointe du jour : <em lang="wln-BE">al pikète du djoû</em>. A
@@ -1088,18 +1087,17 @@
           </p>
           <p><strong>Julie</strong><em lang="wln-BE">, Djulîye</em>.</p>
           <p>
-            <strong>Julien</strong>,
-            <em lang="wln-BE">Julyin, Djulyin,</em> Y<em lang="wln-BE">in,</em>
-            Y<em lang="wln-BE">in-</em>Y<em lang="wln-BE">in</em>.
+            <strong>Julien</strong>, <em lang="wln-BE">Julyin, Djulyin,</em>
+            <em lang="wln-BE">Yin,</em> <em lang="wln-BE">Yin-</em
+            ><em lang="wln-BE">Yin</em>.
           </p>
           <p>
             <strong>Julienne</strong><em lang="wln-BE">, Juliène, Djuliène</em>.
           </p>
           <p>
             <strong>Juliette</strong>,
-            <em lang="wln-BE">Juliyète, Djuliyète,</em> Y<em lang="wln-BE"
-              >ète</em
-            >.
+            <em lang="wln-BE">Juliyète, Djuliyète,</em>
+            <em lang="wln-BE">Yète</em>.
           </p>
           <p>
             <strong>jumeau</strong>, <em lang="wln-BE">djumau,</em>
@@ -1276,8 +1274,8 @@
             <strong>juxtaposer</strong>,
             <em lang="wln-BE">mète à costé yun d' l'aute</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
