--- a/K.html
+++ b/K.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre K</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre K</h1>
           <p>
             <strong>k</strong> dans l'écriture wallonne phonétique,
             <strong>k</strong> remplace souvent le <strong>c</strong> et le
@@ -97,9 +97,9 @@
           <p>
             <strong>kermesse</strong>, <em lang="wln-BE">ducasse</em> ou
             <em lang="wln-BE">ducace</em> (rare), <em lang="wln-BE">fièsse</em>,
-            n.f. <em lang="wln-BE">Lès ducasses à</em> Y<em lang="wln-BE"
-              >ite, c'èsst au mwès d' awous'</em
-            >. <em lang="wln-BE">Fé ducasse, fé fièsse</em>.
+            n.f. <em lang="wln-BE">Lès ducasses à</em>
+            <em lang="wln-BE">Yite, c'èsst au mwès d' awous'</em>.
+            <em lang="wln-BE">Fé ducasse, fé fièsse</em>.
           </p>
           <p>
             <strong>ket</strong><em lang="wln-BE">, kèt',</em> n.m.
@@ -212,8 +212,8 @@
             <em lang="wln-BE">kisse, crèchant</em> (rare) n.m.
             <em lang="wln-BE">On li z-a èrsaki in kisse à 's machwêre</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
