--- a/L.html
+++ b/L.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre L</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre L</h1>
           <p>
             <strong>la</strong>, art. déf., <em lang="wln-BE">la, lè</em>,
             <em lang="wln-BE">èl</em> ou <em lang="wln-BE">'l</em> devant
@@ -540,8 +540,9 @@
               lang="wln-BE"
               >, lonpa,</em
             >
-            n.m. Y<em lang="wln-BE"
-              >un d' nos baudèts a 'l lonpa, on a fét vnu l'ârtisse Pière
+            n.m.
+            <em lang="wln-BE"
+              >Yun d' nos baudèts a 'l lonpa, on a fét vnu l'ârtisse Pière
               Lisart</em
             >.
           </p>
@@ -763,8 +764,9 @@
           <p>
             <strong>lapin</strong>, <em lang="wln-BE">lapin, roucha,</em> n.m.
             <em lang="wln-BE">In lapin sauvâdje</em>.
-            <em lang="wln-BE">In lapin d' garène</em>. Rv. Y<em lang="wln-BE"
-              >èsse t'aussi propre qu'in lapin qu'a yeû sès djoûnes</em
+            <em lang="wln-BE">In lapin d' garène</em>. Rv.
+            <em lang="wln-BE"
+              >Yèsse t'aussi propre qu'in lapin qu'a yeû sès djoûnes</em
             >. <em lang="wln-BE">Satchi in coûp d' fuzik su in roucha</em>.
             <em lang="wln-BE">Mindji dès boulètes avu 'ne sauce lapin</em>.
           </p>
@@ -1260,7 +1262,7 @@
           </p>
           <p>
             <strong>légitime</strong>, <em lang="wln-BE">léjitime,</em> adj. et
-            n. Y<em lang="wln-BE">èsse in léjitime dèfense</em>.
+            n. <em lang="wln-BE">Yèsse in léjitime dèfense</em>.
           </p>
           <p>
             <strong>légitimement</strong>,
@@ -1361,7 +1363,7 @@
               Lèyon, Lucien du Grand Lèyon, Gilbert du Grand Lèyon, Willy du
               Grand Lèyon, Gilberte du Grand Lèyon,</em
             >
-            Y<em lang="wln-BE">von du Grand Lèyon</em>.
+            <em lang="wln-BE">Yvon du Grand Lèyon</em>.
           </p>
           <p>
             <strong>Léona</strong><em lang="wln-BE">, Lèyona,</em> Y<em
@@ -1377,10 +1379,8 @@
             <em lang="wln-BE">atrape Lèyonâr, c'est du lârd</em>.
           </p>
           <p>
-            <strong>Léonie</strong>,
-            <em lang="wln-BE">Lèyonîye, Ninîye,</em> Y<em lang="wln-BE"
-              >onîye</em
-            >.
+            <strong>Léonie</strong>, <em lang="wln-BE">Lèyonîye, Ninîye,</em>
+            <em lang="wln-BE">Yonîye</em>.
           </p>
           <p>
             <strong>Léontine</strong>, <em lang="wln-BE">Lèyontine,</em> Y<em
@@ -1467,9 +1467,9 @@
             <em lang="wln-BE">Il est co lèsse pou 's n-âdje</em>.
             <em lang="wln-BE">Il èsst'aussi subtîle qu'in spirieu</em>.
             <em lang="wln-BE">Il esst'aussi lèsse qu'in coq d'awousse</em>.
-            Plais. Y<em lang="wln-BE"
-              >èsse subtîle come in pus dins lès papes</em
-            >. Y<em lang="wln-BE">èsse aussi lèsse qu'in lum'çon</em>.
+            Plais.
+            <em lang="wln-BE">Yèsse subtîle come in pus dins lès papes</em>.
+            <em lang="wln-BE">Yèsse aussi lèsse qu'in lum'çon</em>.
           </p>
           <p>
             <strong>lestement</strong>,
@@ -1836,9 +1836,8 @@
             ><em lang="wln-BE">, loyi, aloyi, louyi, alouyi</em>.
             <em lang="wln-BE">Loyi in tchi</em>.
             <em lang="wln-BE">Louyi ène djârbe</em>.
-            <em lang="wln-BE">Loyi ène sauce</em>. Y<em lang="wln-BE"
-              >èsse sot à louyi</em
-            >.
+            <em lang="wln-BE">Loyi ène sauce</em>.
+            <em lang="wln-BE">Yèsse sot à louyi</em>.
           </p>
           <p>Se marier : <em lang="wln-BE">s'alouyi pou 'l vîye</em>.</p>
           <p>
@@ -1908,7 +1907,7 @@
             <em lang="wln-BE"
               >In bia lignâdje dè famîye, ça n' vût ri dîre, sauf pou lès
               tch'faus</em
-            >. Y<em lang="wln-BE">èsse dè waute futéye</em>.
+            >. <em lang="wln-BE">Yèsse dè waute futéye</em>.
           </p>
           <p>
             <strong>lignard</strong>,
@@ -2411,14 +2410,14 @@
               >Pindant lès travaus du nouvia canâl, sacans Èspagnols yè Italyins
               lodjine dins 'l vilâdje</em
             >. Rv. <em lang="wln-BE">In mésse lodjeû </em>: pour désigner
-            l'amant de l'hôtesse. Y<em lang="wln-BE">èsse mau lodji</em>. Terme
+            l'amant de l'hôtesse. <em lang="wln-BE">Yèsse mau lodji</em>. Terme
             de jeu de cartes désignant un roi gardé :
             <em lang="wln-BE">i lodje</em>.
           </p>
           <p>
             <strong>logique</strong>, <em lang="wln-BE">lojike</em>, adj. et n.
-            Y<em lang="wln-BE"
-              >un + yun, ça fét 11, lojike, hin Jean-Claude !</em
+            <em lang="wln-BE"
+              >Yun + yun, ça fét 11, lojike, hin Jean-Claude !</em
             >
           </p>
           <p>
@@ -2655,11 +2654,11 @@
           </p>
           <p>
             <strong>loti</strong>, <strong>e</strong
-            ><em lang="wln-BE">, loti, e,</em> adj. Y<em lang="wln-BE"
-              >èsse mau loti</em
-            >. Y<em lang="wln-BE">èsse mau tcheut</em>. Y<em lang="wln-BE"
-              >èsse mau lodji avu ça</em
-            >. Y<em lang="wln-BE">èsse propre avu ça</em>.
+            ><em lang="wln-BE">, loti, e,</em> adj.
+            <em lang="wln-BE">Yèsse mau loti</em>.
+            <em lang="wln-BE">Yèsse mau tcheut</em>.
+            <em lang="wln-BE">Yèsse mau lodji avu ça</em>.
+            <em lang="wln-BE">Yèsse propre avu ça</em>.
           </p>
           <p><strong>lotion</strong><em lang="wln-BE">, locion,</em> n.f.</p>
           <p>
@@ -3071,8 +3070,8 @@
             poteries et faïences, tenu d'adopter un pas lent et une allure
             prudente pour préserver sa délicate marchandise.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
