--- a/M.html
+++ b/M.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre M</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre M</h1>
           <p>
             <strong>ma</strong>, <em lang="wln-BE">èm', 'm</em>.
             <em lang="wln-BE">Dj'ai 'm feume qui bèrdèle toudi</em>.
@@ -340,8 +340,9 @@
             <em lang="wln-BE">Il est si mégue qu'i trawe</em>. Y<em
               lang="wln-BE"
               >èsse mégue come in clô, come ène èskète</em
-            >. Y<em lang="wln-BE"
-              >èsse mégue come in tcha qu'à in vièr à 's keûye</em
+            >.
+            <em lang="wln-BE"
+              >Yèsse mégue come in tcha qu'à in vièr à 's keûye</em
             >. <em lang="wln-BE">Mindji du mégue</em>. Rv. Pour une femme
             maigre :
             <em lang="wln-BE">èle n'a ni panse, ni cu, ni tètes !</em> Rv.
@@ -363,7 +364,7 @@
           </p>
           <p>
             <strong>maigrement</strong><em lang="wln-BE">, mégrèmint,</em> adv.
-            Y<em lang="wln-BE">èsse mégrèmint payi</em>.
+            <em lang="wln-BE">Yèsse mégrèmint payi</em>.
           </p>
           <p>
             <strong>maigreur</strong><em lang="wln-BE">, mégreûr,</em> n.f. Rv.
@@ -530,7 +531,7 @@
             <em lang="wln-BE"
               >Louis Landercy, yè Maurice Mosselman astine mésses à l' èscole
               comunale dès garçons</em
-            >. Y<em lang="wln-BE">èsse méte dè swè</em>.
+            >. <em lang="wln-BE">Yèsse méte dè swè</em>.
             <em lang="wln-BE">Djeûwer au mèméte</em>.
             <em lang="wln-BE"
               >Vos sârez méte dè vo târtine quand vos l'ârez dins vo boudène !
@@ -613,10 +614,10 @@
             <em lang="wln-BE">Mau toûrner, bî toûrner</em>.
             <em lang="wln-BE">I va mau al cinse</em>.
             <em lang="wln-BE">I va d' pus in pus pîre</em>.
-            <em lang="wln-BE">In mau stitchi</em>. Y<em lang="wln-BE"
-              >èsse mau arindji</em
-            >. Il n'y a pas de risque : <em lang="wln-BE">ça n' pût mau</em>.
-            Rv. Je me garde de : <em lang="wln-BE">dji n' pûs mau dè</em>. Répl.
+            <em lang="wln-BE">In mau stitchi</em>.
+            <em lang="wln-BE">Yèsse mau arindji</em>. Il n'y a pas de risque :
+            <em lang="wln-BE">ça n' pût mau</em>. Rv. Je me garde de :
+            <em lang="wln-BE">dji n' pûs mau dè</em>. Répl.
             <em lang="wln-BE">In pû mau, c'èsst'in pu dins lès papes</em>.
             Var. : <em lang="wln-BE">c'èsst'in pû su in pingne</em>. Rv. Entre
             deux maux, il faut choisir le moindre :
@@ -685,8 +686,9 @@
           </p>
           <p>
             <strong>malaisant</strong>,
-            <em lang="wln-BE">mauwasnéjant,</em> adj. Y<em lang="wln-BE"
-              >èsse pa-d'vant ène saki qui brét, c'est mauwasnéjant</em
+            <em lang="wln-BE">mauwasnéjant,</em> adj.
+            <em lang="wln-BE"
+              >Yèsse pa-d'vant ène saki qui brét, c'est mauwasnéjant</em
             >.
           </p>
           <p>
@@ -874,9 +876,9 @@
           <p>
             <strong>malin</strong>, <strong>e</strong
             ><em lang="wln-BE">, malin, e, malène, intèlijant, e,</em> adj. et
-            n. <em lang="wln-BE">Fé 'l malin</em>. Y<em lang="wln-BE"
-              >èsse malin come in sindje</em
-            >. <em lang="wln-BE">C'est 'l pus malin qu' atrape l'aute</em>.
+            n. <em lang="wln-BE">Fé 'l malin</em>.
+            <em lang="wln-BE">Yèsse malin come in sindje</em>.
+            <em lang="wln-BE">C'est 'l pus malin qu' atrape l'aute</em>.
             <em lang="wln-BE">Èle est foûrt malène pou 's n-âdje</em>. Rv.
             <em lang="wln-BE">I faut yèsse malin pou fé 'l bièsse</em>. Rv.
             <em lang="wln-BE">Èl pus malin, c'est 'l cî qui n' dit rî</em>. Rv.
@@ -1787,9 +1789,9 @@
           </p>
           <p>
             <strong>marié</strong><em lang="wln-BE">,</em> <strong>e</strong>,
-            <em lang="wln-BE">mariyé, ye,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse mau marié</em
-            >. Rv. <em lang="wln-BE">In coq marié pièrd sès sporons</em>.
+            <em lang="wln-BE">mariyé, ye,</em> adj. et n.
+            <em lang="wln-BE">Yèsse mau marié</em>. Rv.
+            <em lang="wln-BE">In coq marié pièrd sès sporons</em>.
           </p>
           <p>
             <strong>marier</strong>, <em lang="wln-BE">marier</em>.
@@ -2050,9 +2052,9 @@
             >: <em lang="wln-BE">ène massète</em>. Lourd marteau de forge :
             <em lang="wln-BE">in maca</em>. Heurtoir de porte :
             <em lang="wln-BE">in clicotia</em>. Aide-forgeron :
-            <em lang="wln-BE">in tapeû d' martia</em>. Y<em lang="wln-BE"
-              >èsse intrè 'l martia yè l'inclume</em
-            >. Pour un personnage au comportement bizarre :
+            <em lang="wln-BE">in tapeû d' martia</em>.
+            <em lang="wln-BE">Yèsse intrè 'l martia yè l'inclume</em>. Pour un
+            personnage au comportement bizarre :
             <em lang="wln-BE">il a yeû in coûp d' martia</em>.
           </p>
           <p>
@@ -2165,9 +2167,8 @@
           </p>
           <p>
             <strong>massacrant</strong>, <strong>e</strong
-            ><em lang="wln-BE">,</em> adj. Y<em lang="wln-BE"
-              >èsse d'ène umeûr massacrante</em
-            >.
+            ><em lang="wln-BE">,</em> adj.
+            <em lang="wln-BE">Yèsse d'ène umeûr massacrante</em>.
           </p>
           <p>
             <strong>massacre</strong>, <em lang="wln-BE">massake,</em> n.m.
@@ -2814,8 +2815,8 @@
           </p>
           <p>
             <strong>mélancolie</strong>, <em lang="wln-BE">dèsbauche,</em> n.f.
-            Y<em lang="wln-BE"
-              >èsse al dèsbauche come èl cî qu'a pièrdu 's kinjin</em
+            <em lang="wln-BE"
+              >Yèsse al dèsbauche come èl cî qu'a pièrdu 's kinjin</em
             >.<em lang="wln-BE">ne</em>.
           </p>
           <p>
@@ -2945,8 +2946,9 @@
             <strong>même</strong>, <em lang="wln-BE">minme</em>.
             <em lang="wln-BE">Dji l'ai fét mi-minme</em>.
             <em lang="wln-BE">Raguidez vous-minme</em>.
-            <em lang="wln-BE">Léye-minme</em>. Y<em lang="wln-BE">eûs'-minme</em
-            >. <em lang="wln-BE">Au minme moumint</em>. Tout de même :
+            <em lang="wln-BE">Léye-minme</em>.
+            <em lang="wln-BE">Yeûs'-minme</em>.
+            <em lang="wln-BE">Au minme moumint</em>. Tout de même :
             <em lang="wln-BE">tout 'l minme</em>.
             <em lang="wln-BE">Lès minmès fleûrs</em>.
             <em lang="wln-BE">Dè minme kè</em>.
@@ -3585,9 +3587,9 @@
           <p>
             <strong>métier</strong><em lang="wln-BE">, mèsti,</em> n.m.
             <em lang="wln-BE">Chake ès' mèsti</em>.
-            <em lang="wln-BE">Aprinde in mèsti</em>. Y<em lang="wln-BE"
-              >èsse du mèsti</em
-            >. <em lang="wln-BE">Aprinde èl mènuzié</em>.
+            <em lang="wln-BE">Aprinde in mèsti</em>.
+            <em lang="wln-BE">Yèsse du mèsti</em>.
+            <em lang="wln-BE">Aprinde èl mènuzié</em>.
             <em lang="wln-BE"
               >I n' faut jamé cachi à fé 'l mèsti d' in n-aute</em
             >. Abandonner le métier :
@@ -3812,9 +3814,9 @@
           <p>
             <strong>miel</strong>, <em lang="wln-BE">mièl,</em> n.m. Les
             abeilles : <em lang="wln-BE">lès mouches à mièl</em>.
-            <em lang="wln-BE">Doûs come èl mièl</em>. Y<em lang="wln-BE"
-              >èsse tout mièl, tout suke</em
-            >. Ça va mal tourner : <em lang="wln-BE">ça va toûrner à mièl</em>.
+            <em lang="wln-BE">Doûs come èl mièl</em>.
+            <em lang="wln-BE">Yèsse tout mièl, tout suke</em>. Ça va mal
+            tourner : <em lang="wln-BE">ça va toûrner à mièl</em>.
             <em lang="wln-BE">Daler in lune dè mièl</em>.
           </p>
           <p>
@@ -4482,8 +4484,8 @@
             <em lang="wln-BE"
               >Èm' mame daloût à Nivèle, rûwe dè Mons, lé 'l modisse, pou acater
               in nouvia tchapia</em
-            >. <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, il avoût ène modisse al rûwe Plantchète </em
+            >. <em lang="wln-BE">À</em>
+            <em lang="wln-BE">Yite, il avoût ène modisse al rûwe Plantchète </em
             >: <em lang="wln-BE">Germaine Roggemans, spotéye Jèrmin</em>.<em
               lang="wln-BE"
               >ne à tchapias</em
@@ -4793,8 +4795,9 @@
           <p>
             <strong>mongol</strong>, <strong>e</strong>, trisomique,
             <em lang="wln-BE">mongol, e,</em> adj. et n.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, lès mongols qui vike al Mézonéye sont bî à leû n-éje</em
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE"
+              >Yite, lès mongols qui vike al Mézonéye sont bî à leû n-éje</em
             >.
           </p>
           <p>
@@ -4898,9 +4901,8 @@
           </p>
           <p>
             <strong>monté</strong>, <strong>e</strong
-            ><em lang="wln-BE">, monté, ye,</em> adj. Y<em lang="wln-BE"
-              >èsse bî monté</em
-            >.
+            ><em lang="wln-BE">, monté, ye,</em> adj.
+            <em lang="wln-BE">Yèsse bî monté</em>.
             <em lang="wln-BE"
               >Èm' frére Christian est télmint bî monté qu'on l'a spoté èl
               Ronsu !</em
@@ -4939,9 +4941,8 @@
           </p>
           <p>
             <strong>Montoisy</strong>, <em lang="wln-BE">Montwèzi</em>.
-            <em lang="wln-BE">Èl rûwe Montwèzi monte dè</em> Y<em lang="wln-BE"
-              >ite inviè Clabecq</em
-            >.
+            <em lang="wln-BE">Èl rûwe Montwèzi monte dè</em>
+            <em lang="wln-BE">Yite inviè Clabecq</em>.
           </p>
           <p>
             <strong>montrable</strong>, <em lang="wln-BE">moustrâbe,</em> adj.
@@ -5224,9 +5225,9 @@
           </p>
           <p>
             <strong>mort</strong>, <strong>e</strong>,
-            <em lang="wln-BE">moûrt, e,</em> adj. Y<em lang="wln-BE"
-              >èsse moûrt dè rîre</em
-            >. <em lang="wln-BE">Quand on est moûrt, c'est pou lonmin</em>.
+            <em lang="wln-BE">moûrt, e,</em> adj.
+            <em lang="wln-BE">Yèsse moûrt dè rîre</em>.
+            <em lang="wln-BE">Quand on est moûrt, c'est pou lonmin</em>.
             <em lang="wln-BE">Il est vî assez pou fé in moûrt</em>.
             <em lang="wln-BE">Tchér moûrt</em>.
             <em lang="wln-BE">Èl cî qui ratind, c'est qu'i n'est ni moûrt</em>.
@@ -5561,9 +5562,8 @@
           </p>
           <p>
             <strong>mouise</strong>, <strong>gros embarras</strong>,
-            <em lang="wln-BE">pènin,</em> n.m. Y<em lang="wln-BE"
-              >èsse dins 'l pènin</em
-            >.
+            <em lang="wln-BE">pènin,</em> n.m.
+            <em lang="wln-BE">Yèsse dins 'l pènin</em>.
           </p>
           <p>
             <strong>moulage</strong>, <em lang="wln-BE">moulâdje,</em> n.m.
@@ -6147,8 +6147,9 @@
           <p>
             <strong>musée</strong>, <em lang="wln-BE">muséye,</em> n.m.
             <em lang="wln-BE">Daler visiter in muséye</em>.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, quand ç-què Jean-Paul Cayphas va èrdrouvi 's muséye ? À
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE"
+              >Yite, quand ç-què Jean-Paul Cayphas va èrdrouvi 's muséye ? À
               Tubisse, c'est Luc Delporte qu'est directeûr au muséye dè La
               Porte ; ça fét branmin d'uchs, ça !</em
             >
@@ -6296,8 +6297,8 @@
               >Pou couyoner lès djins, il est foûrt, 'sti-lâle !</em
             >
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
