--- a/N.html
+++ b/N.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre N</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre N</h1>
           <p>
             <strong>n</strong><em lang="wln-BE">, èn'</em>. S'emploie pour
             éviter un hiatus :
@@ -128,9 +128,8 @@
             <strong>naïf</strong>, <strong>ve</strong>,
             <em lang="wln-BE">nayif, e, djan</em>, adj.
             <em lang="wln-BE">Ène grande nayife</em>.
-            <em lang="wln-BE">Il est foûrt djan</em>. Y<em lang="wln-BE"
-              >èsse dèl bone anéye</em
-            >.
+            <em lang="wln-BE">Il est foûrt djan</em>.
+            <em lang="wln-BE">Yèsse dèl bone anéye</em>.
           </p>
           <p>
             <strong>nain</strong>, <strong>e</strong
@@ -139,8 +138,8 @@
           </p>
           <p>
             <strong>naissance</strong>, <em lang="wln-BE">néssance,</em> n.f.
-            Y<em lang="wln-BE"
-              >un d' mès tayons avoût roubliyi dè déclârer èl néssance d'in
+            <em lang="wln-BE"
+              >Yun d' mès tayons avoût roubliyi dè déclârer èl néssance d'in
               gamin</em
             >.
             <em lang="wln-BE"
@@ -278,9 +277,9 @@
           <p>
             <strong>natif</strong>, <strong>ve</strong
             ><em lang="wln-BE">, natif, e,</em> adj.
-            <em lang="wln-BE">Dji sus né natif dè</em> Y<em lang="wln-BE"
-              >ite</em
-            >. <em lang="wln-BE">Èle est natife dè Nivèle</em>.
+            <em lang="wln-BE">Dji sus né natif dè</em>
+            <em lang="wln-BE">Yite</em>.
+            <em lang="wln-BE">Èle est natife dè Nivèle</em>.
           </p>
           <p>
             <strong>nation</strong>, <em lang="wln-BE">nâcion</em>, n.f.
@@ -414,8 +413,9 @@
           <p>
             <strong>navetteur</strong>, <strong>euse</strong
             ><em lang="wln-BE">, navèteû, se,</em> n.m.f.
-            <em lang="wln-BE">Lès navèteûs d'</em> Y<em lang="wln-BE"
-              >ite monte dins 'l train à Nivèle, à Tubisse, à In</em
+            <em lang="wln-BE">Lès navèteûs d'</em>
+            <em lang="wln-BE"
+              >Yite monte dins 'l train à Nivèle, à Tubisse, à In</em
             >.<em lang="wln-BE">nuyères, à Hal</em>.
           </p>
           <p>
@@ -517,7 +517,7 @@
             ><em lang="wln-BE">, négatif, e,</em> adj. et n.
             <em lang="wln-BE"
               >Il est toudi négatif, ké pèssimisse ! In négatif dè foto</em
-            >. Y<em lang="wln-BE">èsse in négatif al banke</em>.
+            >. <em lang="wln-BE">Yèsse in négatif al banke</em>.
           </p>
           <p>
             <strong>négativement</strong
@@ -577,9 +577,9 @@
           </p>
           <p>
             <strong>neige</strong>, <em lang="wln-BE">nîve, nédje,</em> n.f.
-            <em lang="wln-BE">I tchét dèl nîve</em>. Y<em lang="wln-BE"
-              >èsse blanc come nédje</em
-            >. Congère : <em lang="wln-BE">in banc d' nîve</em>. Rv.
+            <em lang="wln-BE">I tchét dèl nîve</em>.
+            <em lang="wln-BE">Yèsse blanc come nédje</em>. Congère :
+            <em lang="wln-BE">in banc d' nîve</em>. Rv.
             <em lang="wln-BE"
               >Dèl nîve su lès brieus, dèl djèléye avant trwès djoûs</em
             >. <em lang="wln-BE">Dèl nédje su lès prés, strin à l' èsté</em>.
@@ -1007,9 +1007,9 @@
           </p>
           <p>
             <strong>noir</strong>, <strong>e</strong>,
-            <em lang="wln-BE">nwêr, e,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse nwêr come du tchèrbon, come in coûrbau</em
-            >. <em lang="wln-BE">I fét nwêr</em>. Il fait nuit noire :
+            <em lang="wln-BE">nwêr, e,</em> adj. et n.
+            <em lang="wln-BE">Yèsse nwêr come du tchèrbon, come in coûrbau</em>.
+            <em lang="wln-BE">I fét nwêr</em>. Il fait nuit noire :
             <em lang="wln-BE">i fét nwêr nût'</em>.
             <em lang="wln-BE">Dès nwêrs tchèveûs</em>.
             <em lang="wln-BE">Dès nwêrès guèrzèles </em>: cassis.
@@ -1267,10 +1267,10 @@
           </p>
           <p>
             <strong>notaire</strong>, <em lang="wln-BE">notére,</em> n.m.f.
-            <em lang="wln-BE">Daler au notére</em>. Rv. Y<em lang="wln-BE"
-              >èsse pansu come in notére</em
-            >. Rv. <em lang="wln-BE">Il a placé sès liârds au notére goyi </em>:
-            il a tout dépensé en boissons. Plais.,
+            <em lang="wln-BE">Daler au notére</em>. Rv.
+            <em lang="wln-BE">Yèsse pansu come in notére</em>. Rv.
+            <em lang="wln-BE">Il a placé sès liârds au notére goyi </em>: il a
+            tout dépensé en boissons. Plais.,
             <em lang="wln-BE">i vaut mèyeû notére què d' mau pârler !</em>
           </p>
           <p>
@@ -1600,7 +1600,7 @@
             <em lang="wln-BE">Lès nuwâdjes dèskinde dè Vèznau inviè</em> Y<em
               lang="wln-BE"
               >ite yè Waut'-Ite</em
-            >. Y<em lang="wln-BE">èsse dins lès nuwâdjes</em>. Un petit nuage
+            >. <em lang="wln-BE">Yèsse dins lès nuwâdjes</em>. Un petit nuage
             chargé de pluie : <em lang="wln-BE">in tacha</em>.
           </p>
           <p>
@@ -1628,7 +1628,7 @@
             <strong>nue</strong><em lang="wln-BE">,</em> nuage<em lang="wln-BE"
               >, nuwe, nuwéye,</em
             >
-            n.f. Y<em lang="wln-BE">èsse dins lès nuwes</em>.
+            n.f. <em lang="wln-BE">Yèsse dins lès nuwes</em>.
             <em lang="wln-BE">Tchér dès nuwes</em>.
             <em lang="wln-BE">On l'a poûrté dins lès nuwes</em>.
           </p>
@@ -1712,8 +1712,8 @@
               >Lès pèpères s' muche dins lès bos yè dins lès cavèrnes</em
             >.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
