--- a/O.html
+++ b/O.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre O</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre O</h1>
           <p>
             <strong>obéir</strong>, <em lang="wln-BE">obèyi, ascouter</em>.
             <em lang="wln-BE">Lès èfants dwève ascouter leûs parints</em>.
@@ -937,9 +937,9 @@
             <em lang="wln-BE">Acater ène tchin</em>.<em lang="wln-BE"
               >ne in n-oûr</em
             >. <em lang="wln-BE">In bijou plaki oûr</em>.
-            <em lang="wln-BE">Dès dints in n-oûr</em>. Y<em lang="wln-BE"
-              >èsse keûdu d' oûr</em
-            >. <em lang="wln-BE">Ène pièche d'oûr</em>.
+            <em lang="wln-BE">Dès dints in n-oûr</em>.
+            <em lang="wln-BE">Yèsse keûdu d' oûr</em>.
+            <em lang="wln-BE">Ène pièche d'oûr</em>.
             <em lang="wln-BE">Ça vaut d' l'oûr</em>.
             <em lang="wln-BE">Avwêr in kieûr d'oûr</em>.
             <em lang="wln-BE">Tout çoû qui rlût n'est ni d'oûr</em>.
@@ -1048,8 +1048,9 @@
             <strong>ordination</strong>,
             <em lang="wln-BE">ordinâcion, oûrdinâcion</em>, n.f.
             <em lang="wln-BE">L'abé</em>
-            <em lang="wln-BE">Bucquoi – curé à</em> Y<em lang="wln-BE"
-              >ite dè 1934 à 1962- avoût rçu és' n-ordinâcion adon qu'il avoût
+            <em lang="wln-BE">Bucquoi – curé à</em>
+            <em lang="wln-BE"
+              >Yite dè 1934 à 1962- avoût rçu és' n-ordinâcion adon qu'il avoût
               40 ans</em
             >.
           </p>
@@ -1378,10 +1379,9 @@
           <p>
             <strong>où</strong>,
             <em lang="wln-BE">ayu, yu, èyu, ayuskè, èyuskè. Ayu dalez ?</em>
-            Y<em lang="wln-BE">u stez ? Èyu l'avez vu ?</em>
-            <em lang="wln-BE">N'impoûrte ayu</em>. Y<em lang="wln-BE"
-              >u ç-què dj'astoûs</em
-            >.
+            <em lang="wln-BE">Yu stez ? Èyu l'avez vu ?</em>
+            <em lang="wln-BE">N'impoûrte ayu</em>.
+            <em lang="wln-BE">Yu ç-què dj'astoûs</em>.
           </p>
           <p>
             <em lang="wln-BE">Ayusk'il est vo frére ?</em> Rép. plais. :
@@ -1442,8 +1442,9 @@
           <p>
             <strong>ouest</strong><em lang="wln-BE">, ouwès',</em> n.m.
             <em lang="wln-BE">Èl vint èsst'à l'ouwès', i va pieûre</em>. Rv.
-            <em lang="wln-BE">Si 'l coq dè l'èglîje dè</em> Y<em lang="wln-BE"
-              >ite raguid' l' èstaminèt, c'est qu'il a swè !</em
+            <em lang="wln-BE">Si 'l coq dè l'èglîje dè</em>
+            <em lang="wln-BE"
+              >Yite raguid' l' èstaminèt, c'est qu'il a swè !</em
             >
             Explication : l'estaminet, se trouvant à l'ouest du coq, il devrait
             bientôt pleuvoir. Note : suite à l'ajout d'un paratonnerre mal
@@ -1656,8 +1657,8 @@
             <strong>oxygéner</strong><em lang="wln-BE">, ocsijéner</em>.
             <em lang="wln-BE">Acater d' l'eûye ocsijénéye</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
