--- a/Q.html
+++ b/Q.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre Q</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre Q</h1>
           <p>
             <strong>quadragénaire</strong>,
             <em lang="wln-BE">qu'a dins lès karante, alintoûr dè karante ans</em
@@ -171,9 +171,9 @@
           </p>
           <p>
             <strong>quart</strong>, <em lang="wln-BE">kârt,</em> n.m.
-            <em lang="wln-BE">In kârt d'eûre</em>. Y<em lang="wln-BE"
-              >èsse à trwès kârts sot</em
-            >. <em lang="wln-BE">C'èsst'in trwès kârts</em>.
+            <em lang="wln-BE">In kârt d'eûre</em>.
+            <em lang="wln-BE">Yèsse à trwès kârts sot</em>.
+            <em lang="wln-BE">C'èsst'in trwès kârts</em>.
             <em lang="wln-BE">Dji vérai à kârt dè chinke eûres</em>.
             <em lang="wln-BE">Il a fé l'ouvrâdje su trwès kârts dè temps </em>:
             plus vite que prévu.
@@ -219,8 +219,9 @@
           </p>
           <p>
             <strong>quatorzième</strong>, <em lang="wln-BE">katoûrzième</em>,
-            adj. et n. Y<em lang="wln-BE"
-              >èsse tréze à tâbe, ça n' va ni, adon on cache après in</em
+            adj. et n.
+            <em lang="wln-BE"
+              >Yèsse tréze à tâbe, ça n' va ni, adon on cache après in</em
             >
             <em lang="wln-BE">katoûrzième</em>.
           </p>
@@ -260,7 +261,7 @@
           </p>
           <p>
             <strong>quatrième</strong><em lang="wln-BE">, katième,</em> adj. et
-            n. Y<em lang="wln-BE">èsse in katième anéye</em>.
+            n. <em lang="wln-BE">Yèsse in katième anéye</em>.
           </p>
           <p>
             <strong>quatrièmement</strong>,
@@ -689,8 +690,8 @@
             <em lang="wln-BE">dè tous lès djoûs</em>.
             <em lang="wln-BE">C'èsst'in n-ouvrâdje dè tous lès djoûs</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
