--- a/R.html
+++ b/R.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre R</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre R</h1>
           <p>
             <strong>rabâchage</strong>,
             <em lang="wln-BE">prétchâdje, radotâdje</em>, n.m.
@@ -1319,9 +1319,8 @@
           <p><strong>rapatrier</strong>, <em lang="wln-BE">rapatriyi</em>.</p>
           <p>
             <strong>râpe</strong><em lang="wln-BE">, rape,</em> n.f.
-            <em lang="wln-BE">Ène rape à froumâdje</em>. Rv. Y<em lang="wln-BE"
-              >èsse t'aussi poli qu'ène rape</em
-            >.
+            <em lang="wln-BE">Ène rape à froumâdje</em>. Rv.
+            <em lang="wln-BE">Yèsse t'aussi poli qu'ène rape</em>.
           </p>
           <p>
             <strong>râper</strong><em lang="wln-BE">, (è)scrèper</em>.
@@ -3887,9 +3886,8 @@
             <em lang="wln-BE">Lès régues du savwêr-vîfe</em>.
             <em lang="wln-BE">Lès régues du djeu</em>. Les menstrues :
             <em lang="wln-BE">lès régues</em>. Règle de maçon :
-            <em lang="wln-BE">in rîle</em>. Y<em lang="wln-BE"
-              >èsse in règue dè Controle Tèknike</em
-            >.
+            <em lang="wln-BE">in rîle</em>.
+            <em lang="wln-BE">Yèsse in règue dè Controle Tèknike</em>.
           </p>
           <p>
             <strong>réglé</strong>, <strong>e</strong
@@ -3957,9 +3955,8 @@
             <strong>régner</strong>, <em lang="wln-BE">ringner</em>.
             <em lang="wln-BE">C'est Philippe qui ringne su les Bèljes</em>. Pour
             une maladie qui règne : <em lang="wln-BE">roûler</em>.
-            <em lang="wln-BE">Èl plauke du covid roûle à</em> Y<em lang="wln-BE"
-              >ite</em
-            >.
+            <em lang="wln-BE">Èl plauke du covid roûle à</em>
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>regonflement</strong
@@ -4517,9 +4514,8 @@
           </p>
           <p>
             <strong>remariage</strong>,
-            <em lang="wln-BE">(è)rmariâdje,</em> n.m. Y<em lang="wln-BE"
-              >eûs', c'est lès èfants d'in rmariâdje</em
-            >.
+            <em lang="wln-BE">(è)rmariâdje,</em> n.m.
+            <em lang="wln-BE">Yeûs', c'est lès èfants d'in rmariâdje</em>.
           </p>
           <p>
             <strong>remarier</strong><em lang="wln-BE">, (è)rmarier</em>.
@@ -4919,7 +4915,7 @@
           </p>
           <p>
             <strong>remous</strong>, <em lang="wln-BE">rèmous, (è)rmous</em>,
-            n.m. Y<em lang="wln-BE">èsse pris dins lès rmous</em>.
+            n.m. <em lang="wln-BE">Yèsse pris dins lès rmous</em>.
           </p>
           <p>
             <strong>rempaillage</strong
@@ -5447,9 +5443,8 @@
           </p>
           <p>
             <strong>renonce</strong> au jeu de cartes,
-            <em lang="wln-BE">(è)rnon,</em> n.m. Y<em lang="wln-BE"
-              >èsse in rnon in carau</em
-            >.
+            <em lang="wln-BE">(è)rnon,</em> n.m.
+            <em lang="wln-BE">Yèsse in rnon in carau</em>.
           </p>
           <p>
             <strong>renoncer</strong>, <em lang="wln-BE">(è)rnonci</em>.
@@ -8332,8 +8327,9 @@
             ><em lang="wln-BE">, romin</em>.<em lang="wln-BE">ne,</em> adj. et
             n. <em lang="wln-BE">Aprinde à lîre dès chifes romins</em>.
             <em lang="wln-BE">Savez lîre </em>:
-            <em lang="wln-BE">MMXXI ? Facile !</em> Y<em lang="wln-BE"
-              >è MMMCCCCILIX ? Ah, bon, on n' rit pûs asteûr, hin ! Mi
+            <em lang="wln-BE">MMXXI ? Facile !</em>
+            <em lang="wln-BE"
+              >Yè MMMCCCCILIX ? Ah, bon, on n' rit pûs asteûr, hin ! Mi
               néri !</em
             >
           </p>
@@ -8834,9 +8830,8 @@
           <p>
             <strong>rouleau</strong
             ><em lang="wln-BE">, roûlau, roûlwèr, roûlia,</em> n.m.
-            <em lang="wln-BE">In roûlau d'papi-cabinèt</em>. Y<em lang="wln-BE"
-              >èsse au d'bout du roûlau</em
-            >.
+            <em lang="wln-BE">In roûlau d'papi-cabinèt</em>.
+            <em lang="wln-BE">Yèsse au d'bout du roûlau</em>.
           </p>
           <p>
             <em lang="wln-BE">In roûlau à târtes</em>.
@@ -8886,7 +8881,7 @@
             <em lang="wln-BE"
               >Al ducasse, lès barakis doûrmine dans leûs barakes, lé
               l'èglîje</em
-            >. Y<em lang="wln-BE">eûs' is dijine</em> «<em lang="wln-BE"
+            >. <em lang="wln-BE">Yeûs' is dijine</em> «<em lang="wln-BE"
               >vwètur' » putoût qu'</em
             >
             «<em lang="wln-BE">barake »</em>.
@@ -9200,8 +9195,8 @@
             <strong>rutabaga</strong><em lang="wln-BE">, rutabaga,</em> n.m.
             <em lang="wln-BE">Dèl guêre, on a branmin mindji dès rutabagas</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
