--- a/S.html
+++ b/S.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre S</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre S</h1>
           <p>
             <strong>S</strong>, <em lang="wln-BE">ès'</em>, le langage
             ouest-wallon reprend le <strong>s</strong> dans certains mots qui
@@ -360,7 +360,7 @@
             <strong>sain</strong><em lang="wln-BE">, sin,</em> adj. Y<em
               lang="wln-BE"
               >èsse sin d' èsprit, yèsse d'asto</em
-            >. Y<em lang="wln-BE">èsse sin et sauf</em>.
+            >. <em lang="wln-BE">Yèsse sin et sauf</em>.
           </p>
           <p>
             <strong>saindoux</strong>, <em lang="wln-BE">grésse dè pourcha</em>.
@@ -404,9 +404,8 @@
           </p>
           <p>
             <strong>saint-frusquin</strong
-            ><em lang="wln-BE">, sint-fruskin,</em> n.m. Y<em lang="wln-BE"
-              >è tout 'l sint-fruskin</em
-            >. On entend aussi :
+            ><em lang="wln-BE">, sint-fruskin,</em> n.m.
+            <em lang="wln-BE">Yè tout 'l sint-fruskin</em>. On entend aussi :
             <em lang="wln-BE">sint-trimblèmint, sint-tintwin</em>.
           </p>
           <p>
@@ -478,9 +477,10 @@
             <em lang="wln-BE"
               >Jules est moûrt dè sézich'mint quand il a vu qu'il avoût gangni
               in miyon d'eûros au Lotto</em
-            >. <em lang="wln-BE">Bièsse, hin !</em> Y<em lang="wln-BE"
-              >è èl pus pîre, c'est qu'i n' m'a ni mis su 's n-èritâdje ! Co pus
-              bièsse, ça !</em
+            >. <em lang="wln-BE">Bièsse, hin !</em>
+            <em lang="wln-BE"
+              >Yè èl pus pîre, c'est qu'i n' m'a ni mis su 's n-èritâdje ! Co
+              pus bièsse, ça !</em
             >
           </p>
           <p>
@@ -947,9 +947,8 @@
             <strong>sapin</strong><em lang="wln-BE">,</em>
             <em lang="wln-BE">sapin</em>, n.m.
             <em lang="wln-BE">Ène plantche dè sapin</em>.
-            <em lang="wln-BE">Èl Bo d' Sapin à</em> Y<em lang="wln-BE"
-              >ite, c'est lé 'l ruwe dèl Procèssion</em
-            >.
+            <em lang="wln-BE">Èl Bo d' Sapin à</em>
+            <em lang="wln-BE">Yite, c'est lé 'l ruwe dèl Procèssion</em>.
           </p>
           <p>
             <strong>sapinière</strong
@@ -1142,7 +1141,7 @@
           <p>
             <strong>sauret</strong><em lang="wln-BE">, sorèt,</em> n.m.
             <em lang="wln-BE">On mindje du sorèt avu dès patakes à cazake</em>.
-            Y<em lang="wln-BE">èsse mégue come in sorèt</em>. Rv. A une personne
+            <em lang="wln-BE">Yèsse mégue come in sorèt</em>. Rv. A une personne
             assoiffée :
             <em lang="wln-BE">avez mindji du sorèt pou souper ?</em>
           </p>
@@ -1456,7 +1455,7 @@
             <em lang="wln-BE"
               >C'est scandaleû qu'in politike pûje dès liârds dins 'l poche du
               CPAS</em
-            >. Y<em lang="wln-BE">è pourtant !</em>
+            >. <em lang="wln-BE">Yè pourtant !</em>
           </p>
           <p>
             <strong>scandaliser</strong><em lang="wln-BE">, scandaliser</em>.
@@ -1635,9 +1634,8 @@
           </p>
           <p>
             <strong>score</strong>, <em lang="wln-BE">score,</em> n.m.
-            <em lang="wln-BE">Pou</em> Y<em lang="wln-BE"
-              >ite conte Vèznau, lè score a sti 1-1</em
-            >.
+            <em lang="wln-BE">Pou</em>
+            <em lang="wln-BE">Yite conte Vèznau, lè score a sti 1-1</em>.
           </p>
           <p>
             <strong>scorpion</strong><em lang="wln-BE">, scoûrpion,</em> n.m.
@@ -2064,7 +2062,7 @@
             >.<em lang="wln-BE">ne, samin</em>.<em lang="wln-BE">ne</em> (rare),
             n.f. <em lang="wln-BE">Al sèmin</em>.<em lang="wln-BE"
               >ne qui vît, d'aboûrd</em
-            >. Y<em lang="wln-BE">èsse dè s'min</em>.<em lang="wln-BE">ne</em>.
+            >. <em lang="wln-BE">Yèsse dè s'min</em>.<em lang="wln-BE">ne</em>.
             Semaine sainte : <em lang="wln-BE">èl pèneûse sèmin</em>.<em
               lang="wln-BE"
               >ne</em
@@ -2902,8 +2900,8 @@
             <em lang="wln-BE"
               >A chake coû qu'il a ène course à vélo qui passe à</em
             >
-            Y<em lang="wln-BE"
-              >ite, Lucien Decamps est signaleûr à in carfoûr</em
+            <em lang="wln-BE"
+              >Yite, Lucien Decamps est signaleûr à in carfoûr</em
             >.
           </p>
           <p>
@@ -3304,7 +3302,7 @@
             <em lang="wln-BE"
               >Inocint katoûrze » du fèt' què dj'avoûs vnu au monde in 28
               décimbe, fièsse dès Inocints</em
-            >. Y<em lang="wln-BE">è</em> «<em lang="wln-BE"
+            >. <em lang="wln-BE">Yè</em> «<em lang="wln-BE"
               > katourze » pask'èl dérni pâpe apèlé Inocint astout èl n°
               tréze</em
             >.
@@ -3678,7 +3676,7 @@
             <strong>solitude</strong>, <em lang="wln-BE">solitud',</em> n.f.
             <em lang="wln-BE"
               >Quand on est dins 'l solitud', on brét souvint tout seû</em
-            >. Y<em lang="wln-BE">èsse dès'seûlé</em>.
+            >. <em lang="wln-BE">Yèsse dès'seûlé</em>.
           </p>
           <p>
             <strong>solivage</strong><em lang="wln-BE">, djiz'tâdje,</em> n.m.
@@ -3967,9 +3965,9 @@
           </p>
           <p>
             <strong>sort</strong>, <em lang="wln-BE">soûrt,</em> n.m.
-            <em lang="wln-BE">Satchi au soûrt</em>. Y<em lang="wln-BE"
-              >èsse contint d'ès' soûrt</em
-            >. <em lang="wln-BE">In tirâdje au soûrt</em>.
+            <em lang="wln-BE">Satchi au soûrt</em>.
+            <em lang="wln-BE">Yèsse contint d'ès' soûrt</em>.
+            <em lang="wln-BE">In tirâdje au soûrt</em>.
             <em lang="wln-BE">In mauvé soûrt</em>.
           </p>
           <p>
@@ -4161,7 +4159,7 @@
             <em lang="wln-BE">Èrprinde ès' soufe, ès' n-alin</em>.<em
               lang="wln-BE"
               >ne</em
-            >. Y<em lang="wln-BE">èsse dju d' soufe, dju d' alin</em>.<em
+            >. <em lang="wln-BE">Yèsse dju d' soufe, dju d' alin</em>.<em
               lang="wln-BE"
               >ne</em
             >.
@@ -4181,8 +4179,8 @@
               >Quand nos stine djoûnes, i n'avoût pupon d' souflèt al foûrdje
               dè</em
             >
-            Y<em lang="wln-BE"
-              >ite, ça stoût in ventilateûr élèctrike qui soufèloût dins 'l
+            <em lang="wln-BE"
+              >Yite, ça stoût in ventilateûr élèctrike qui soufèloût dins 'l
               feu</em
             >.
           </p>
@@ -5667,10 +5665,11 @@
           </p>
           <p>
             <strong>suffrage</strong><em lang="wln-BE">, sufrâdje,</em> n.m.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, il avoût in cabarèt qui s'apèloût</em
-            >
-            «<em lang="wln-BE"> Au Sufrâdje Univèrsèl »</em>.
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE">Yite, il avoût in cabarèt qui s'apèloût</em> «<em
+              lang="wln-BE"
+              > Au Sufrâdje Univèrsèl »</em
+            >.
           </p>
           <p>
             <strong>suicide</strong><em lang="wln-BE">, swicîde</em>, n.m.
@@ -5767,10 +5766,10 @@
           </p>
           <p>
             <strong>sujet</strong>, <strong>te</strong
-            ><em lang="wln-BE">, sudjèt, e,</em> adj. et n. Y<em lang="wln-BE"
-              >èsse sudjèt à dès migrin</em
-            >.<em lang="wln-BE">nes</em>.
-            <em lang="wln-BE">Lès sudjèts du rwè</em>. Un mauvais sujet, un
+            ><em lang="wln-BE">, sudjèt, e,</em> adj. et n.
+            <em lang="wln-BE">Yèsse sudjèt à dès migrin</em>.<em lang="wln-BE"
+              >nes</em
+            >. <em lang="wln-BE">Lès sudjèts du rwè</em>. Un mauvais sujet, un
             mauvais plaisant :
             <em lang="wln-BE">in mauvé sudjèt, in mauvé byin</em> ou
             <em lang="wln-BE">in mauvé bi</em>.
@@ -5935,13 +5934,13 @@
           <p>
             <strong>sur</strong><em lang="wln-BE">,</em> prép.<em lang="wln-BE"
               >, su, sur', dèssu, d'su, sul</em
-            >. Y<em lang="wln-BE">èsse èstindu su in lit</em>.
+            >. <em lang="wln-BE">Yèsse èstindu su in lit</em>.
             <em lang="wln-BE"
               >Dji vos l' djur' su 'l tièsse d'èm' bèle-mére ! Mète ène payèle
               su 'l feu</em
-            >. <em lang="wln-BE">Il a tcheut su 's cu</em>. Y<em lang="wln-BE"
-              >un su dîj' ont sti malâdes</em
-            >. <em lang="wln-BE">C'èsst'in èfant arivé sul târd</em>.
+            >. <em lang="wln-BE">Il a tcheut su 's cu</em>.
+            <em lang="wln-BE">Yun su dîj' ont sti malâdes</em>.
+            <em lang="wln-BE">C'èsst'in èfant arivé sul târd</em>.
             <em lang="wln-BE">Il a tcheut sur' léye</em>.
             <em lang="wln-BE">Mète ène postur' dèssu 'l tchèminéye</em>. Aussi
             <em lang="wln-BE">après</em> dans l'expression :
@@ -6367,8 +6366,9 @@
             <em lang="wln-BE"
               >Pou lès vrés Itrwès, Notrè-Dame d'Ite èsst'in foûrt simbôle ayu
               daler fé sès priyères conte lès plaukes</em
-            >. Y<em lang="wln-BE"
-              >è, Nom dès Zo, au moumint du coranavirus, vlà qu'èl curé a dvu
+            >.
+            <em lang="wln-BE"
+              >Yè, Nom dès Zo, au moumint du coranavirus, vlà qu'èl curé a dvu
               sèrer l'èglîje deûs mwès d' long</em
             >.
             <em lang="wln-BE"
@@ -6443,8 +6443,8 @@
               >C'est Napolèyon qui nos a apoûrté èl sistinme mètrike</em
             >. Genièvre de grain : <em lang="wln-BE">vî sistinme</em>.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
