--- a/T.html
+++ b/T.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre T</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre T</h1>
           <p>
             <strong>ta</strong>, adj. poss. Pas de tutoiement à Ittre, donc,
             <strong>ta</strong> devient
@@ -336,8 +336,8 @@
             visiteur qui exagère ses façons :
             <em lang="wln-BE">lès façons, c'est pou lès tayeûrs</em>.
             <em lang="wln-BE">Pou lès rôbes dè mariâdje, sacans feumes dè</em>
-            Y<em lang="wln-BE"
-              >ite daline al tayeûse qui dmeûroût à gauche in montant 'l tiène
+            <em lang="wln-BE"
+              >Yite daline al tayeûse qui dmeûroût à gauche in montant 'l tiène
               dè Hal à Brin</em
             >.<em lang="wln-BE">ne Chatau</em>.
           </p>
@@ -1363,7 +1363,7 @@
             <em lang="wln-BE">Tinde ène coûrde</em>.
             <em lang="wln-BE">Èrtinde ène tchin</em>.<em lang="wln-BE"
               >ne dè vélo</em
-            >. Y<em lang="wln-BE">èsse tindu</em>.
+            >. <em lang="wln-BE">Yèsse tindu</em>.
           </p>
           <p>
             <strong>tendrement</strong>, <em lang="wln-BE">tindrèmint,</em> adv.
@@ -1580,8 +1580,9 @@
             ><em lang="wln-BE">, tèrasser, raboukyi</em>.
             <em lang="wln-BE"
               >On a sti contints dè vîr David raboukyi Goliath</em
-            >. Y<em lang="wln-BE"
-              >è, si in djoû, au Doudou, sint Georges èn' tèras'roût ni 'l
+            >.
+            <em lang="wln-BE"
+              >Yè, si in djoû, au Doudou, sint Georges èn' tèras'roût ni 'l
               Lum'son, koû ç-qu'on froût ? Dèvant d' bati, on a tèrassé 'l
               tèrin</em
             >.
@@ -1914,8 +1915,9 @@
           <p>
             <strong>théoriquement</strong
             ><em lang="wln-BE">, tèyorik'mint,</em> adv.
-            <em lang="wln-BE">Tèyorik'mint pou daler dè</em> Y<em lang="wln-BE"
-              >ite à Brusèle in n-auto, i faut trinte minutes </em
+            <em lang="wln-BE">Tèyorik'mint pou daler dè</em>
+            <em lang="wln-BE"
+              >Yite à Brusèle in n-auto, i faut trinte minutes </em
             >: <em lang="wln-BE">in pratike… !</em>
           </p>
           <p><strong>Thérèse</strong>, <em lang="wln-BE">Tèrèse</em>.</p>
@@ -2553,7 +2555,7 @@
           </p>
           <p>
             <strong>tombe</strong><em lang="wln-BE">, tombe, fosse,</em> n.f.
-            Y<em lang="wln-BE">èsse dins 'l tombe</em>.
+            <em lang="wln-BE">Yèsse dins 'l tombe</em>.
             <em lang="wln-BE">Chuchi lès pichoulis pa lès racènes</em>.
             <em lang="wln-BE"
               >Èl djoû què d' raguid'rai lès solés du fosti Gérard Vandèrlin pa
@@ -3019,9 +3021,9 @@
           </p>
           <p>
             <strong>touffu</strong>, <strong>e</strong>,
-            <em lang="wln-BE">spès, se,</em> adj. Y<em lang="wln-BE"
-              >èsse spès dè tch'feûs</em
-            >. <em lang="wln-BE">Ène èspèsse tchèv'lur'</em>.
+            <em lang="wln-BE">spès, se,</em> adj.
+            <em lang="wln-BE">Yèsse spès dè tch'feûs</em>.
+            <em lang="wln-BE">Ène èspèsse tchèv'lur'</em>.
           </p>
           <p>
             <strong>touillage</strong><em lang="wln-BE">, touyâdje,</em> n.m.
@@ -3663,8 +3665,9 @@
               lang="wln-BE"
               >nau,</em
             >
-            n.m. <em lang="wln-BE">A</em> Y<em lang="wln-BE"
-              >ite, avant-guêre, lès djoûnes dèskindine à sclite dèspu 'l
+            n.m. <em lang="wln-BE">A</em>
+            <em lang="wln-BE"
+              >Yite, avant-guêre, lès djoûnes dèskindine à sclite dèspu 'l
               Calvére 'squ'al place Sint-Rèmi</em
             >.
           </p>
@@ -3766,7 +3769,7 @@
           </p>
           <p>
             <strong>traître</strong>, <em lang="wln-BE">tréte</em>, adj. et
-            n.m.f. Y<em lang="wln-BE">èsse tréte à 's patrîye</em>.
+            n.m.f. <em lang="wln-BE">Yèsse tréte à 's patrîye</em>.
             <em lang="wln-BE">C'èsst'ène tréte</em>. Rv. Avoir une conduite de
             traître : <em lang="wln-BE">avwêr dès manières dè roucha tchi</em>.
             Pour une boisson qui monte à la tête, une bière forte :
@@ -3810,10 +3813,9 @@
           </p>
           <p>
             <strong>tram</strong>, <em lang="wln-BE">tram,</em> n.m.
-            <em lang="wln-BE">Èl dérni tram a passé à</em> Y<em lang="wln-BE"
-              >ite èl 4 djulète 1959</em
-            >. Rv. Pratiquer le coït interrompu :
-            <em lang="wln-BE">sauter in bas du tram</em>.
+            <em lang="wln-BE">Èl dérni tram a passé à</em>
+            <em lang="wln-BE">Yite èl 4 djulète 1959</em>. Rv. Pratiquer le coït
+            interrompu : <em lang="wln-BE">sauter in bas du tram</em>.
           </p>
           <p>
             <strong>tranchage</strong>, <em lang="wln-BE">trinchâdje,</em> n.m.
@@ -4266,9 +4268,8 @@
           </p>
           <p>
             <strong>tremblante</strong><em lang="wln-BE">,</em> maladie du
-            mouton<em lang="wln-BE">, trimblante,</em> n.f. Y<em lang="wln-BE"
-              >un d' nos bèdots a 'l trimblante</em
-            >.
+            mouton<em lang="wln-BE">, trimblante,</em> n.f.
+            <em lang="wln-BE">Yun d' nos bèdots a 'l trimblante</em>.
           </p>
           <p>
             <strong>tremble</strong>, peuplier<em lang="wln-BE">, triyane,</em>
@@ -4670,9 +4671,9 @@
           <p>
             <strong>trique</strong><em lang="wln-BE">, trike,</em> n.f.,
             <em lang="wln-BE">rauv'lin,</em> n.m.
-            <em lang="wln-BE">Il a yeû dèl trike</em>. Y<em lang="wln-BE"
-              >èsse mégue come in coûp d' trike</em
-            >. <em lang="wln-BE">Taper avu in rauv'lin</em>.
+            <em lang="wln-BE">Il a yeû dèl trike</em>.
+            <em lang="wln-BE">Yèsse mégue come in coûp d' trike</em>.
+            <em lang="wln-BE">Taper avu in rauv'lin</em>.
           </p>
           <p>
             <strong>triqueballe</strong><em lang="wln-BE">, trik'bal,</em> n.m.
@@ -4910,8 +4911,9 @@
           </p>
           <p>
             <strong>trotte</strong><em lang="wln-BE">, trote</em>, n.f.
-            <em lang="wln-BE">Dè</em> Y<em lang="wln-BE"
-              >ite 'squ'à Compostèle, il a 'ne fameûse trote !</em
+            <em lang="wln-BE">Dè</em>
+            <em lang="wln-BE"
+              >Yite 'squ'à Compostèle, il a 'ne fameûse trote !</em
             >
           </p>
           <p>
@@ -5216,9 +5218,8 @@
           <p>
             <strong>tuer</strong><em lang="wln-BE">, tuwer</em>.
             <em lang="wln-BE">I s'a tuwé à l'ouvrâdje</em>.
-            <em lang="wln-BE">Tuwer 'l temps</em>. Y<em lang="wln-BE"
-              >èsse bon à tuwer</em
-            >. Rv.
+            <em lang="wln-BE">Tuwer 'l temps</em>.
+            <em lang="wln-BE">Yèsse bon à tuwer</em>. Rv.
             <em lang="wln-BE"
               >On n'tuwe ni tout ç-qu'est cras ! I vaut mèyeû tuwer 'l diâle
               qu'èl diâle èn' vos tuwe !</em
@@ -5236,9 +5237,8 @@
             <strong>tuerie</strong><em lang="wln-BE">, tuw'rîye, n</em>.<em
               lang="wln-BE"
               >f</em
-            >. <em lang="wln-BE">Lès praniles dè</em> Y<em lang="wln-BE"
-              >ite, c'èsst'ène tuw'rîye</em
-            >.
+            >. <em lang="wln-BE">Lès praniles dè</em>
+            <em lang="wln-BE">Yite, c'èsst'ène tuw'rîye</em>.
           </p>
           <p>
             <strong>tuerie particulière</strong
@@ -5376,9 +5376,8 @@
           <p>
             <strong>tutoiement</strong>,
             <em lang="wln-BE">tutwèy'mint,</em> n.m.
-            <em lang="wln-BE">Dins 'l walon d'</em> Y<em lang="wln-BE"
-              >ite, normal'mint, i n'a pon d' tutwèy'mint</em
-            >.
+            <em lang="wln-BE">Dins 'l walon d'</em>
+            <em lang="wln-BE">Yite, normal'mint, i n'a pon d' tutwèy'mint</em>.
           </p>
           <p>
             <strong>tutoyer</strong>, <em lang="wln-BE">tutwèyi</em>.
@@ -5446,8 +5445,8 @@
             <em lang="wln-BE">Il a atrapé èl fièfe tifoyid'</em>.
           </p>
           <p><strong>typhus</strong>, <em lang="wln-BE">tifus',</em> n.m.</p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
