--- a/U.html
+++ b/U.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre U</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre U</h1>
           <p><strong>U</strong>, lète,<em lang="wln-BE">u</em>.</p>
           <p>
             <strong>ulcération</strong>, de l'œil<em lang="wln-BE">, browon</em
@@ -82,9 +82,9 @@
             <em lang="wln-BE">'ne,</em> adj. num. et pron.,
             <em lang="wln-BE">yun, yeune</em> ou <em lang="wln-BE">yone</em>.
             <em lang="wln-BE">In bia èfant</em>.
-            <em lang="wln-BE">Ène bèle coumére</em>. Y<em lang="wln-BE"
-              >un, èyè yun, ça fét deûs</em
-            >. Y<em lang="wln-BE">un dins l'aute ça dira</em>.
+            <em lang="wln-BE">Ène bèle coumére</em>.
+            <em lang="wln-BE">Yun, èyè yun, ça fét deûs</em>.
+            <em lang="wln-BE">Yun dins l'aute ça dira</em>.
             <em lang="wln-BE"
               >Dj'ai d'ai yeû yone avu li ! I n'a fét ni yone ni deûs</em
             >. <em lang="wln-BE">C'est 'ne bèle auto</em>.
@@ -393,8 +393,8 @@
             <em lang="wln-BE">dji n' vwès ni à koû-ce què ça poûroût sièrvi</em
             >.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
