--- a/V.html
+++ b/V.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre V</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre V</h1>
           <p><strong>V</strong>, vé.</p>
           <p>
             <strong>va</strong>, interj.
@@ -900,11 +900,10 @@
             bon repas : <em lang="wln-BE">mète ès' vinte su fourme</em>. Faire
             un régime sévère : <em lang="wln-BE">grougni à 's vinte</em>. Avoir
             le ventre creux : <em lang="wln-BE">avwêr sès bouyas vûdes</em>.
-            <em lang="wln-BE">Couri vinte à têre</em>. Y<em lang="wln-BE"
-              >èsse à plat vinte</em
-            >. J'ai l'estomac dans les talons :
-            <em lang="wln-BE">èm' vinte plake à 'm dos</em>. Se tenir en
-            équilibre sur le ventre :
+            <em lang="wln-BE">Couri vinte à têre</em>.
+            <em lang="wln-BE">Yèsse à plat vinte</em>. J'ai l'estomac dans les
+            talons : <em lang="wln-BE">èm' vinte plake à 'm dos</em>. Se tenir
+            en équilibre sur le ventre :
             <em lang="wln-BE">yèsse à pansète su 'ne couche</em>. Être atteint
             de coccidiose, maladie du lapin. :
             <em lang="wln-BE">avwêr èl gros vinte</em>. Importuner quelqu'un :
@@ -964,9 +963,9 @@
             <em lang="wln-BE"
               >C'èsst'in mindjant dèl viande ni cûte assez qu'on pût atraper 'l
               viêr salutére</em
-            >. <em lang="wln-BE">Tout nu come in viêr</em>. Y<em lang="wln-BE"
-              >èsse mindji pa lès viêrs, pa lès moulons</em
-            >. Vert blanc de fumier : <em lang="wln-BE">warbô,</em> n.m. Trace
+            >. <em lang="wln-BE">Tout nu come in viêr</em>.
+            <em lang="wln-BE">Yèsse mindji pa lès viêrs, pa lès moulons</em>.
+            Vert blanc de fumier : <em lang="wln-BE">warbô,</em> n.m. Trace
             laissée par un ver sur le linge mis à sécher :
             <em lang="wln-BE">sucète,</em> n.f.
           </p>
@@ -1561,7 +1560,7 @@
           </p>
           <p>
             <strong>victime</strong>, <em lang="wln-BE">victime,</em> n.m.f.
-            Y<em lang="wln-BE">èsse victime d' ène maladîye</em>.
+            <em lang="wln-BE">Yèsse victime d' ène maladîye</em>.
           </p>
           <p><strong>Victoire</strong>, <em lang="wln-BE">Victwêre</em>.</p>
           <p>
@@ -2224,7 +2223,7 @@
             <em lang="wln-BE">Tant qu' vos travayiz, vos sondjiz </em>: «<em
               lang="wln-BE"
               > viv'mint 'm pinsion ! »</em
-            >. Y<em lang="wln-BE">è quand vos stez pinsioné, vos sondjiz </em>:
+            >. <em lang="wln-BE">Yè quand vos stez pinsioné, vos sondjiz </em>:
             «<em lang="wln-BE"> yè asteûr ? Viv'mint kè ? Mori ? »</em>.
           </p>
           <p>
@@ -2751,8 +2750,8 @@
           </p>
           <p>
             <strong>vouvoyer</strong>, <em lang="wln-BE">vouvwèyi</em>.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE"
-              >ite, on vouvwèye toudi, ni kèstion d' tutwèyi</em
+            <em lang="wln-BE">À</em>
+            <em lang="wln-BE">Yite, on vouvwèye toudi, ni kèstion d' tutwèyi</em
             >.
           </p>
           <p>
@@ -2866,8 +2865,8 @@
             <strong>vulve</strong> d'animal, de vache :
             <em lang="wln-BE">nate, natur'</em>, n.f.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
