--- a/Y.html
+++ b/Y.html
@@ -55,9 +55,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Dictionnaire - lettre Y</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Dictionnaire - lettre Y</h1>
           <p><strong>Y</strong><em lang="wln-BE">, î grèc</em>.</p>
           <p>
             <strong>Y</strong> remplace les <strong>l</strong> mouillés : fille
@@ -100,14 +100,15 @@
             >.
           </p>
           <p>
-            <strong>Yser</strong>, Y<em lang="wln-BE">sêr</em>.
-            <em lang="wln-BE">Èl bataye dè l'</em> Y<em lang="wln-BE"
-              >sêr astoût ène bataye dè frèchaus, is stine tèrtous imbèrnés
+            <strong>Yser</strong>, <em lang="wln-BE">Ysêr</em>.
+            <em lang="wln-BE">Èl bataye dè l'</em>
+            <em lang="wln-BE"
+              >Ysêr astoût ène bataye dè frèchaus, is stine tèrtous imbèrnés
               'squ'à leûs dgnoûs</em
             >.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
