--- a/conjugaisons.html
+++ b/conjugaisons.html
@@ -26,9 +26,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Conjugaisons</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Conjugaisons</h1>
           <h2>Groupes des conjugaisons</h2>
           <h3>1<sup>er</sup> groupe</h3>
           <p>
@@ -168,7 +168,11 @@
               ratinde, rèsponde, rinde, tinde, tonde, vinde</em
             >.
           </p>
-          <h2 style="margin-top: 2rem">Conjugaison du verbe avoir</h2>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2>Conjugaison du verbe avoir</h2>
           <h3>Mode indicatif</h3>
           <div class="conjugaison-temps-ctn">
             <div class="conjugaison-temps">
@@ -475,7 +479,11 @@
             pour donner <em lang="wln-BE">ravwè</em> ou
             <em lang="wln-BE">ravoû</em>.
           </p>
-          <h2 style="margin-top: 2rem">Conjugaison du verbe être</h2>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2>Conjugaison du verbe être</h2>
           <h3>Mode indicatif</h3>
           <div class="conjugaison-temps-ctn">
             <div class="conjugaison-temps">
@@ -766,7 +774,11 @@
               <em lang="wln-BE">rfuchant</em>
             </p>
           </div>
-          <h2 style="margin-top: 2rem">Conjugaison premier groupe</h2>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2>Conjugaison premier groupe</h2>
           <p>
             Les verbes avec l'infinitif
             <em lang="wln-BE"><strong>é</strong></em> ou
@@ -912,6 +924,10 @@
               <p><em lang="wln-BE">tchanter</em></p>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Verbes irréguliers du 1<sup>er</sup> groupe</h2>
           <p>
             Les verbes se terminant par une consonne suivie de
@@ -1307,6 +1323,10 @@
               >.
             </p>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison deuxième groupe</h2>
           <p>
             Modèle : <em lang="wln-BE"><strong>cachi</strong>,</em>
@@ -1448,6 +1468,10 @@
             parfois par le passé antérieur
             <em lang="wln-BE"><strong>dj'ârai/èrai cachi</strong>,</em> etc.
           </p>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison troisième groupe A</h2>
           <p>Avec la forme <u>-ant</u> au participe présent du français.</p>
           <p>
@@ -1582,6 +1606,10 @@
               <p><em lang="wln-BE">fini, finîye</em></p>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison troisième groupe B</h2>
           <p>Avec la forme <u>-ant</u> au participe présent du français.</p>
           <p>
@@ -1713,6 +1741,10 @@
               <p><em lang="wln-BE">doûrmi, îye</em></p>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison quatrième groupe</h2>
           <p>
             La plupart des verbes en <strong>OIR</strong> qui font
@@ -1844,6 +1876,10 @@
               <p><em lang="wln-BE">apèrçu, we</em></p>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison cinquième groupe</h2>
           <p>
             Les verbes wallons se terminant par
@@ -2236,6 +2272,10 @@
             <em lang="wln-BE">djè sâroûs/sèroûs/sroûs vu</em>. Que je sois vu :
             <em lang="wln-BE">què d' suche vu</em>.
           </p>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <h2>Conjugaison des verbes irréguliers</h2>
           <p>
             <em lang="wln-BE"><strong>Fé</strong>,</em> <strong>faire</strong>.
@@ -3115,8 +3155,8 @@
             les règles du français.
             <em lang="wln-BE">Dji sûs ralé, il est ralé,</em> etc.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
