--- a/grammaire.html
+++ b/grammaire.html
@@ -1730,8 +1730,8 @@
             </p>
             <p>
               <strong>ceux :</strong> <em lang="wln-BE">lès cîs</em>.
-              <em lang="wln-BE">Lès cîs d'</em> Y<em lang="wln-BE"
-                >ite, lès cîs d' Vèznau, lès cîs d'Aut'-Ite</em
+              <em lang="wln-BE">Lès cîs d'</em>
+              <em lang="wln-BE">Yite, lès cîs d' Vèznau, lès cîs d'Aut'-Ite</em
               >.
             </p>
             <p>
@@ -3106,7 +3106,7 @@
             </p>
             <h3>Adverbes de doute</h3>
             <p>
-              <strong>et encore :</strong> y<em lang="wln-BE">è co, èyè co</em>.
+              <strong>et encore :</strong> <em lang="wln-BE">Yè co, èyè co</em>.
               <em lang="wln-BE"
                 >Il a fini 'l course, yè co, ça stoût tout djusse</em
               >.
@@ -3485,9 +3485,8 @@
             </p>
             <p>
               <strong>outre</strong><em lang="wln-BE">, en sus de </em>:
-              <em lang="wln-BE">au-dzeûr dè /du</em>. Y<em lang="wln-BE"
-                >è au-dzeûr du martchi, i nos a minti</em
-              >.
+              <em lang="wln-BE">au-dzeûr dè /du</em>.
+              <em lang="wln-BE">Yè au-dzeûr du martchi, i nos a minti</em>.
             </p>
             <p>
               <strong>par :</strong> <em lang="wln-BE">par, pa,</em> par le :
@@ -3635,8 +3634,9 @@
             </p>
             <p>
               <strong>jusqu'à :</strong> <em lang="wln-BE">'squ'à, djusk'à</em>.
-              <em lang="wln-BE">Dè</em> Y<em lang="wln-BE"
-                >ite djusk'à Vèznau, il a bî chinke kilomètes</em
+              <em lang="wln-BE">Dè</em>
+              <em lang="wln-BE"
+                >Yite djusk'à Vèznau, il a bî chinke kilomètes</em
               >. <em lang="wln-BE">Alez, 'squ' al sèmin</em>.<em lang="wln-BE"
                 >ne qui vît d'aboûrd !</em
               >
@@ -4065,15 +4065,13 @@
       <div class="container">
         <ol>
           <li id="fn5">
-            <p>
-              enclitique : mot qui prend appui sur le mot précédent et forme
-              avec lui une seule unité accentuelle. Ex. : qui est-ce ?<a
-                href="#fnref5"
-                class="footnote-back"
-                role="doc-backlink"
-                >↩︎</a
-              >
-            </p>
+            enclitique : mot qui prend appui sur le mot précédent et forme avec
+            lui une seule unité accentuelle. Ex. : qui est-ce ?<a
+              href="#fnref5"
+              class="footnote-back"
+              role="doc-backlink"
+              >↩︎</a
+            >
           </li>
         </ol>
       </div>
