--- a/index.html
+++ b/index.html
@@ -188,15 +188,12 @@
       <div class="container">
         <ol>
           <li id="fn0">
-            <p>
-              <em lang="wln-BE">Rvazi</em> : axiome, proverbe, dicton,
-              sentence.<a
-                href="#fnref0"
-                class="footnote-back"
-                role="doc-backlink"
-                >↩︎</a
-              >
-            </p>
+            <em lang="wln-BE">Rvazi</em> : axiome, proverbe, dicton, sentence.<a
+              href="#fnref0"
+              class="footnote-back"
+              role="doc-backlink"
+              >↩︎</a
+            >
           </li>
         </ol>
       </div>
