--- a/remerciements.html
+++ b/remerciements.html
@@ -26,9 +26,9 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Remerciements</h1>
-        <section>
+      <section>
+        <div class="container">
+          <h1>Remerciements</h1>
           <p>
             Cet ouvrage, comme le précédent Wallon-Français, doit beaucoup à
             Joseph Coppens, auteur des dictionnaires et grammaire aclots dont
@@ -68,7 +68,11 @@
               </figcaption>
             </figure>
           </p>
-          <p style="margin-top: 2rem; margin-bottom: 0">Merci :</p>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <p>Merci :</p>
           <ul class="remerciements-list">
             <li>
               à tous les habitants de l'entité que j'ai parfois harcelés pour
@@ -110,8 +114,8 @@
             >.
           </p>
           <p>Jean-Marie Gervy, le 16 février 2021</p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
